--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -38,7 +38,7 @@ about.dialog.contributers=\u0627\u0644\u0645\u0633\u0627\u0647\u0645\u0648\u0646
 about.dialog.documentation=\u0627\u0644\u062a\u0648\u062b\u064a\u0642
 about.dialog.general_information=\u0645\u0639\u0644\u0648\u0645\u0627\u062a \u0639\u0627\u0645\u0629
 about.dialog.homepage=\u0627\u0644\u0635\u0641\u062d\u0629 \u0627\u0644\u0631\u0626\u064a\u0633\u064a\u0629
-##about.dialog.professional_folder_sharing_tool=\u0627\u0644\u0623\u062f\u0627\u0629 \u0627\u0644\u0625\u062d\u062a\u0631\u0627\u0641\u064a\u0629 \u0644\u0645\u0634\u0627\u0631\u0643\u0629 \u0627\u0644\u0645\u062c\u0644\u062f\u0627\u062a
+##about.dialog.professional_folder_sharing_tool=Sync, access, share and backup files easily
 about.dialog.send_bug_report=\u0625\u0631\u0633\u0627\u0644 \u062a\u0642\u0631\u064a\u0631 \u0628\u062e\u0637\u0623
 ##about.dialog.send_bug_report.key=B
 about.dialog.support=\u0627\u0644\u062f\u0639\u0645
@@ -114,7 +114,7 @@ connect.name=\u0625\u062a\u0635\u0627\u0644
 
 console.updatecheck.new_developmentversion=------------ \u0646\u0633\u062e\u0629 \u0645\u0637\u0648\u0631\u0629 \u062c\u062f\u064a\u062f\u0629 \u062a\u0645 \u062a\u062d\u0645\u064a\u0644\u0647\u0627------------
 
-##createshortcut.description=\u0625\u0636\u0627\u0641\u0629 \u0627\u062e\u062a\u0635\u0627\u0631 \u0644\u0647\u0630\u0627 \u0627\u0644\u0645\u062c\u0644\u062f \u0639\u0644\u0649 \u0633\u0637\u062d \u0627\u0644\u0645\u0643\u062a\u0628
+##createshortcut.description=Creates a shortcut to this PowerFolder on your desktop
 createshortcut.key=\u064a
 createshortcut.name=\u0625\u0636\u0627\u0641\u0629 \u0623\u062e\u062a\u0635\u0627\u0631 \u0639\u0644\u0649 \u0633\u0637\u062d \u0627\u0644\u0645\u0643\u062a\u0628
 
@@ -133,7 +133,7 @@ deletefile.key=\u0628
 deletefile.name=\u0645\u0633\u062d \u0627\u0644\u0645\u0644\u0641\u0627\u062a
 
 ##dialog.addmembertofriendlist.button.add=Add To Friends
-##dialog.addmembertofriendlist.explain=(\u0639\u0628\u0631 \u0625\u0636\u0627\u0641\u0629 \u0634\u062e\u0635 \u0625\u0644\u0649 \u0642\u0627\u0626\u0645\u0629 \u0627\u0644\u0627\u0635\u062f\u0642\u0627\u0621, \u062a\u0639\u0637\u064a\u0647 \u0627\u0644\u0635\u0644\u0627\u062d\u064a\u0629 \u0644\u062a\u0639\u062f\u064a\u0644 \u0627\u0644\n\u0645\u062d\u062a\u0648\u064a \u0645\u0644\u0641\u0627\u062a\u0643. \u0645\u062b\u0627\u0644. \u0625\u0636\u0627\u0641\u0629 \u0645\u0644\u0641\u0627\u062a \u062c\u062f\u064a\u062f\u0629. \u0628\u0625\u0645\u0643\u0627\u0646\u0643 \u0628\u0628\u0633\u0627\u0637\u0629 \u062a\u0639\u062f\u064a\u0644 \u0627\u0644\u0627\u0635\u062f\u0642\u0627\u0621\n\u062d\u0627\u0644\u0629 \u0627\u0644\u0639\u0636\u0648 \u0628\u0627\u0633\u062a\u062e\u062f\u0627\u0645 \u0627\u0644\u0642\u0648\u0627\u0626\u0645 \u0627\u0644\u0628\u064a\u0626\u064a\u0629 \u0627\u0636\u063a\u0637 \u0628\u0627\u0644\u0632\u0631 \u0627\u0644\u0627\u0628\u0645\u0646 \u0644\u0644\u0641\u0627\u0631\u0629)).
+##dialog.addmembertofriendlist.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
 ##dialog.addmembertofriendlist.messageTitle=Message from {0}
 ##dialog.addmembertofriendlist.question={0} joined one or more PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
 ##dialog.addmembertofriendlist.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
@@ -257,7 +257,7 @@ filelist.filefilter.searchfieldinfo=\u0623\u062f\u062e\u0644 \u0643\u0644\u0645\
 filelist.modifiedby=\u0639\u064f\u062f\u0651\u0644 \u0628\u0648\u0627\u0633\u0637\u0629
 filelist.name=\u0627\u0644\u0627\u0633\u0645
 filelist.recursive=\u0631\u0624\u064a\u0629 \u0645\u0633\u0637\u062d\u0629
-##filelist.status.no_files_available_add_files_and_invite=\u0644\u0627\u064a\u0648\u062c\u062f \u0645\u0644\u0641\u0627\u062a \u0645\u062a\u0627\u062d\u0629 ... \u0642\u0645 \u0628\u0625\u0636\u0627\u0641\u0629 \u0645\u0644\u0641\u0627\u062a \u0641\u064a \u0645\u062c\u0644\u062f\u0643 \u0627\u0644\u0645\u062d\u0644\u064a \u0648\u0623\u0637\u0644\u0628 \u0645\u0646 \u0627\u0644\u0627\u062e\u0631\u064a\u0646 \u0627\u0644\u0627\u0646\u0636\u0645\u0627\u0645 \u0639\u0646 \u0637\u0631\u064a\u0642 \u0627\u0631\u0633\u0627\u0644 \u062f\u0639\u0648\u0629
+##filelist.status.no_files_available_add_files_and_invite=No files available... add files in your local folder and ask others to join this PowerFolder by Invitation
 filelist.status.no_files_available_add_files_in_folder=\u0644\u0627\u064a\u0648\u062c\u062f \u0645\u0644\u0641\u0627\u062a \u0645\u062a\u0627\u062d\u0629 ... \u0642\u0645 \u0628\u0625\u0636\u0627\u0641\u0629 \u0645\u0644\u0641\u0627\u062a \u0641\u064a \u0645\u062c\u0644\u062f\u0643 \u0627\u0644\u0645\u062d\u0644\u064a \u0644\u0645\u0634\u0627\u0631\u0643\u062a\u0647\u0645
 filelist.status.no_files_available_yet_fetching_filelist=\u0644\u0627\u064a\u0648\u062c\u062f \u0645\u0644\u0641\u0627\u062a \u0645\u062a\u0627\u062d\u0629 \u0628\u0639\u062f ... \u0643\u0648\u0646 \u0642\u0627\u0626\u0645\u0629 \u0645\u0644\u0641\u0627\u062a
 
@@ -295,37 +295,37 @@ folder.members.synchronisation_panel.folder_size=\u062d\u062c\u0645 \u0627\u0644
 folder.members.synchronisation_panel.local_size=\u0627\u0644\u062d\u062c\u0645 \u0627\u0644\u0645\u062d\u0644\u064a
 folder.members.synchronisation_panel.title=\u0648\u0636\u0639\u064a\u0629 \u062a\u0632\u0627\u0645\u0646 \u0627\u0644\u0639\u0636\u0648
 
-##foldercreate.description=\u0625\u0646\u0634\u0627\u0621 \u0645\u062c\u0644\u062f\u0627\u062a \u0645\u0634\u0627\u0631\u0643\u0629 \u062c\u062f\u064a\u062f\u0629
+##foldercreate.description=Creates a new PowerFolder
 foldercreate.dialog.backupbyonlinestorage=\u0646\u0633\u062e\u0629 \u0627\u062d\u062a\u064a\u0627\u0637\u064a\u0629 \u0639\u0646 \u0637\u0631\u064a\u0642 \u0648\u062d\u062f\u0629 \u0627\u0644\u062a\u062e\u0632\u064a\u0646 \u0639\u0628\u0631 \u0627\u0644\u0627\u0646\u062a\u0631\u0646\u062a
-##foldercreate.dialog.backuperror.text=\u063a\u064a\u0631 \u0642\u0627\u062f\u0631 \u0639\u0644\u0649 \u062a\u0631\u0643\u064a\u0628 \u0648\u062d\u062f\u0629 \u0627\u0644\u062a\u062e\u0632\u064a\u0646 \u0639\u0628\u0631 \u0627\u0644\u0627\u0646\u062a\u0631\u0646\u062a \u0644\u0627\u062c\u0631\u0627\u0621 \u0646\u0633\u062e\u0629 \u0627\u062d\u062a\u064a\u0627\u0637\u064a\u0629 \u0644\u0644\u0645\u062c\u0644\u062f
-##foldercreate.dialog.backuperror.title=\u063a\u064a\u0631 \u0642\u0627\u062f\u0631 \u0639\u0644\u0649 \u0639\u0645\u0644 \u0646\u0633\u062e\u0629 \u0627\u062d\u062a\u064a\u0627\u0637\u064a\u0629 \u0644\u0644\u0645\u062c\u0644\u062f
+##foldercreate.dialog.backuperror.text=Unable to setup the Online Storage to backup the PowerFolder
+##foldercreate.dialog.backuperror.title=Unable to backup PowerFolder
 ##foldercreate.dialog.create_desktop_shortcut=Create desktop shortcut
-##foldercreate.dialog.saveinvitation=\u0627\u062d\u0641\u0638 \u062f\u0639\u0648\u0629 \u0641\u064a \u0645\u062c\u0644\u062f
+##foldercreate.dialog.saveinvitation=Save an invitation in the PowerFolder
 foldercreate.dialog.sendinvitation=\u0623\u0631\u0633\u0644 \u0627\u0644\u062f\u0639\u0648\u0627\u062a \u0641\u064a\u0645\u0627 \u0628\u0639\u062f
-##foldercreate.dialog.settings=\u0642\u0645 \u0628\u0625\u062f\u062e\u0627\u0644 \u0627\u0644\u0627\u0639\u062f\u0627\u062f\u062a \u0644\u0644\u0645\u062c\u0644\u062f \u0627\u0644\u062c\u062f\u064a\u062f \u0627\u0644\u0630\u064a \u062a\u0631\u064a\u062f \u0645\u0634\u0627\u0631\u0643\u062a\u0647
-##foldercreate.dialog.title=\u062a\u0643\u0648\u064a\u0646 \u0645\u062c\u0644\u062f \u062c\u062f\u064a\u062f
-##foldercreate.dirempty.text=\u0642\u0627\u0639\u062f\u0629 \u0645\u0633\u0627\u0631 \u0627\u0644\u0645\u062c\u0644\u062f \u064a\u062c\u0628 \u0627\u0646 \u0644\u0627\u062a\u0643\u0648\u0646 \u0641\u0627\u0631\u063a\u0629
+##foldercreate.dialog.settings=Enter the settings for the new PowerFolder
+##foldercreate.dialog.title=Create new PowerFolder
+##foldercreate.dirempty.text=Base directory of PowerFolder should not be empty
 foldercreate.dirempty.title=\u0642\u0627\u0639\u062f\u0629 \u0645\u0633\u0627\u0631 \u0627\u0644\u0645\u062c\u0644\u062f \u0645\u0637\u0644\u0648\u0628\u0629
-##foldercreate.error.already_taken=\u0642\u0627\u0639\u062f\u0629 \u0627\u0644\u0645\u0633\u0627\u0631 \u0645\u0623\u062e\u0648\u0630\u0629 \u0645\u0646 \u0642\u0628\u0644 \u0627\u0644\u0645\u062c\u0644\u062f  '{0}'\n'{1}'
-##foldercreate.error.it_is_base_dir=\u063a\u064a\u0631 \u0642\u0627\u062f\u0631 \u0639\u0644\u0649 \u0641\u062a\u062d \u0627\u0644\u0645\u062c\u0644\u062f \u0636\u0645\u0646 \u0627\u0644\u0645\u0633\u0627\u0631  '{0}'. \u0625\u0646\u0647\u0627 \u0642\u0627\u0639\u062f\u0629 \u0645\u0633\u0627\u0631\u0627\u062a PowerFolder  \u0644\u062c\u0645\u064a\u0639 \u0627\u0644\u0645\u062c\u0644\u062f\u0627\u062a \!
+##foldercreate.error.already_taken=Base directory already taken by PowerFolder '{0}'\n'{1}'
+##foldercreate.error.it_is_base_dir=Unable to open PowerFolder on directory '{0}'. It is the PowerFolder base directory for all PowerFolders\!
 foldercreate.error.unable_to_create=\u063a\u064a\u0631 \u0642\u0627\u062f\u0631 \u0639\u0644\u0649 \u062a\u0643\u0648\u064a\u0646 \u0645\u0633\u0627\u0631  '{0}'
 foldercreate.error.unable_to_open=\u063a\u064a\u0631 \u0642\u0627\u062f\u0631 \u0639\u0644\u0649 \u0641\u062a\u062d \u0645\u0633\u0627\u0631 \u0645\u062d\u0644\u064a  '{0}'. \u064a\u0638\u0647\u0631\u0623\u0646\u0647  \u0645\u0644\u0641  \!
 foldercreate.key=\u0649
 foldercreate.name=\u0645\u062c\u0644\u062f \u062c\u062f\u064a\u062f
-##foldercreate.nameempty.text=\u0623\u0633\u0645 \u0627\u0644\u0645\u062c\u0644\u062f \u064a\u062c\u0628 \u0623\u0646 \u0644\u0627 \u064a\u0643\u0648\u0646 \u0641\u0627\u0631\u063a\u0627\u0627
-##foldercreate.nameempty.title=\u0627\u0633\u0645 \u0627\u0644\u0645\u062c\u0644\u062f \u0645\u0637\u0644\u0648\u0628
-##foldercreate.progress.text=\u062a\u0643\u0648\u064a\u0646 \u0645\u062c\u0644\u062f  '{0}'
-##foldercreate.success=\u0645\u062c\u0644\u062f  {0} \u0645\u0634\u0627\u0631\u0643, \u0646\u0633\u062e \u0645\u062d\u0644\u064a \u0639\u0644\u0649  '{1}'
+##foldercreate.nameempty.text=Name of the PowerFolder should not be empty
+##foldercreate.nameempty.title=Name required
+##foldercreate.progress.text=Creating PowerFolder '{0}'
+##foldercreate.success=PowerFolder {0} successfully setup, local copy at '{1}'
 
-##folderexception.dialog.text=\u063a\u064a\u0631 \u0642\u0627\u062f\u0631 \u0639\u0644\u0649 \u0636\u0645 \u0627\u0644\u0645\u062c\u0644\u062f  '{0}'.\n\u0627\u0644\u0633\u0628\u0628\: {1}
-##folderexception.dialog.title=\u0645\u0634\u0643\u0644\u0629 \u0645\u0639 \u0627\u0644\u0645\u062c\u0644\u062f  '{0}'
+##folderexception.dialog.text=Unable to join PowerFolder '{0}'.\nReason\: {1}
+##folderexception.dialog.title=Problem with PowerFolder '{0}'
 
 folderinfo.header=\u0645\u0639\u0644\u0648\u0645\u0627\u062a \u0627\u0644\u0645\u062c\u0644\u062f
 folderinfo.syncprofile=\u0645\u0644\u0641 \u0627\u0644\u0645\u0632\u0627\u0645\u0646\u0629
 folderinfo.totalsync=\u0627\u0644\u0645\u0632\u0627\u0645\u0646\u0629 \u0627\u0644\u0625\u062c\u0645\u0627\u0644\u064a\u0629
 
-##folderjoin.description=\u0636\u0645 \u0647\u0630\u0627 \u0627\u0644\u0645\u062c\u0644\u062f
-##folderjoin.dialog.title=\u0636\u0645 \u0627\u0644\u0645\u062c\u0644\u062f {0}?
+##folderjoin.description=Join this PowerFolder
+##folderjoin.dialog.title=Join PowerFolder {0}?
 folderjoin.inivtation=\u062a\u0645 \u0625\u0633\u062a\u0642\u0628\u0627\u0644 \u062f\u0639\u0648\u0629
 folderjoin.inivtationfrom=\u062a\u0645 \u0625\u0633\u062a\u0642\u0628\u0627\u0644 \u062f\u0639\u0648\u0629 \u0645\u0646  {0}
 folderjoin.invitationtext=\u0631\u0633\u0627\u0644\u0629
@@ -341,11 +341,11 @@ folderjoin.secret=\u0633\u0631\u064a
 folderjoin.warning.notempty.text=\u0645\u0633\u0627\u0631 \u0627\u0644\u0646\u0633\u062e \u0627\u0644\u0645\u062d\u0644\u064a \u0644\u0644\u0645\u062c\u0644\u062f '{0}' \u063a\u064a\u0631 \u0641\u0627\u0631\u063a.\n\u062c\u0645\u064a\u0639 \u0627\u0644\u0645\u0644\u0641\u0627\u062a \u0627\u0644\u0645\u0648\u062c\u0648\u062f\u0629 \u0647\u0646\u0627\u0643 \u0633\u0648\u0641 \u064a\u062a\u0645 \u0631\u0641\u0639\u0647\u0627 \u0625\u0644\u0649 \u0645\u0633\u062a\u062e\u062f\u0645\u064a\u0647\u0627 .\n\u0647\u0644 \u062a\u0631\u064a\u062f \u0628\u0627\u0644\u062a\u0623\u0643\u064a\u062f \u0648\u0636\u0639 \u0627\u0644\u0646\u0633\u062e \u0627\u0644\u0645\u062d\u0644\u064a \u0644\u0647\u0630\u0627 \u0627\u0644\u0645\u062c\u0644\u062f \u0641\u064a \n'{1}'?
 folderjoin.warning.notempty.title=\u0642\u0627\u0639\u062f\u0629 \u0627\u0644\u0645\u0633\u0627\u0631 \u0627\u0644\u0645\u062d\u0644\u064a \u063a\u064a\u0631 \u0641\u0627\u0631\u063a\u0629
 
-##folderleave.description=\u0623\u062a\u0631\u0643 \u0647\u0630\u0627 \u0627\u0644\u0645\u062c\u0644\u062f  (\u0623\u0648\u0642\u0641 \u0627\u0644\u0645\u0634\u0627\u0631\u0643\u0629 \u0648\u062a\u062d\u0645\u064a\u0644 \u0627\u0644\u0645\u0639\u0644\u0648\u0645\u0627\u062a )
+##folderleave.description=Leave this PowerFolder
 folderleave.dialog.delete=\u0645\u0633\u062d \u0627\u0644\u0645\u0639\u0644\u0648\u0645\u0627\u062a
 folderleave.dialog.sync_warning=\u0627\u0644\u0645\u062c\u0644\u062f \u0642\u064a\u062f \u0627\u0644\u0645\u0632\u0627\u0645\u0646\u0629 \!
-##folderleave.dialog.text=\u0623\u062a\u0631\u0643 \u0627\u0644\u0645\u062c\u0644\u062f  {0}?
-##folderleave.dialog.title=\u0623\u062a\u0631\u0643 \u0627\u0644\u0645\u062c\u0644\u062f  {0}?
+##folderleave.dialog.text=Leave PowerFolder {0}?
+##folderleave.dialog.title=Leave PowerFolder {0}?
 folderleave.key=\u0645
 folderleave.name=\u0623\u062a\u0631\u0643 \u0627\u0644\u0645\u062c\u0644\u062f
 
