--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -38,7 +38,7 @@ about.dialog.contributers=Mitarbeiter
 about.dialog.documentation=Dokumentation
 about.dialog.general_information=Allgemeine Information
 about.dialog.homepage=Homepage
-##about.dialog.professional_folder_sharing_tool=Professionelle Dateisychronisation
+##about.dialog.professional_folder_sharing_tool=Sync, access, share and backup files easily
 about.dialog.send_bug_report=Fehler melden
 about.dialog.send_bug_report.key=F
 about.dialog.support=Support
@@ -114,7 +114,7 @@ connect.name=Verbinden
 
 console.updatecheck.new_developmentversion=------------ Neue enwicklungs version heruntergeladen ------------
 
-##createshortcut.description=Erstellt eine Desktop-Verkn\u00fcfung dieses Folders
+##createshortcut.description=Creates a shortcut to this PowerFolder on your desktop
 createshortcut.key=C
 createshortcut.name=Desktop-Verkn\u00fcfpung erstellen
 
@@ -133,7 +133,7 @@ deletefile.key=L
 deletefile.name=Dateien l\u00f6schen
 
 ##dialog.addmembertofriendlist.button.add=Add To Friends
-##dialog.addmembertofriendlist.explain=Hinweis\: Freunde d\u00fcrfen die Inhalten der teilgenommenen Folder \u00e4ndern
+##dialog.addmembertofriendlist.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
 ##dialog.addmembertofriendlist.messageTitle=Message from {0}
 ##dialog.addmembertofriendlist.question={0} joined one or more PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
 ##dialog.addmembertofriendlist.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
@@ -257,7 +257,7 @@ filelist.filefilter.searchfieldinfo=Suche nach...
 filelist.modifiedby=Ge\u00e4ndert von
 filelist.name=Name
 filelist.recursive=Flache Ansicht
-##filelist.status.no_files_available_add_files_and_invite=Keine Dateien verf\u00fcgbar... F\u00fcgen Sie dem Folder Dateien hinzu und verteilen Sie Einladungen 
+##filelist.status.no_files_available_add_files_and_invite=No files available... add files in your local folder and ask others to join this PowerFolder by Invitation
 filelist.status.no_files_available_add_files_in_folder=Keine Dateien verf\u00fcbar... F\u00fcgen Sie dem Folder Dateien hinzu
 filelist.status.no_files_available_yet_fetching_filelist=Dateiliste wird abgerufen...
 
@@ -295,37 +295,37 @@ folder.members.synchronisation_panel.folder_size=Folder Gr\u00f6sse
 folder.members.synchronisation_panel.local_size=Lokal Gr\u00f6sse
 folder.members.synchronisation_panel.title=Mitglieds Sync Status
 
-##foldercreate.description=Erstellt einen neuen Folder, mit Ihren Dateien
+##foldercreate.description=Creates a new PowerFolder
 foldercreate.dialog.backupbyonlinestorage=Backup auf Online Speicher
-##foldercreate.dialog.backuperror.text=Der Online Speicher konnte den Folder nicht sichern
-##foldercreate.dialog.backuperror.title=Backup des Folders gescheitert
+##foldercreate.dialog.backuperror.text=Unable to setup the Online Storage to backup the PowerFolder
+##foldercreate.dialog.backuperror.title=Unable to backup PowerFolder
 ##foldercreate.dialog.create_desktop_shortcut=Create desktop shortcut
-##foldercreate.dialog.saveinvitation=Einladung im Verzeichnis abspeichern
+##foldercreate.dialog.saveinvitation=Save an invitation in the PowerFolder
 foldercreate.dialog.sendinvitation=Einladung versenden
-##foldercreate.dialog.settings=Geben Sie nun die Einstellungen f\u00fcr den neuen Folder an
-##foldercreate.dialog.title=Folder erstellen
-##foldercreate.dirempty.text=Bitte w\u00e4hlen Sie den Speicherort f\u00fcr den Inhalt des Folders\!
+##foldercreate.dialog.settings=Enter the settings for the new PowerFolder
+##foldercreate.dialog.title=Create new PowerFolder
+##foldercreate.dirempty.text=Base directory of PowerFolder should not be empty
 foldercreate.dirempty.title=Speicherort nicht gesetzt
-##foldercreate.error.already_taken=Verzeichnis von '{0}' schon verwendet\n'{1}'
-##foldercreate.error.it_is_base_dir=Kann Folder nicht im Verzeichnis '{0}' erstellen. Dies ist das Basis-Verzeichnis f\u00fcr alle Folder\!
+##foldercreate.error.already_taken=Base directory already taken by PowerFolder '{0}'\n'{1}'
+##foldercreate.error.it_is_base_dir=Unable to open PowerFolder on directory '{0}'. It is the PowerFolder base directory for all PowerFolders\!
 foldercreate.error.unable_to_create=Kann Verzeichnis '{0}' nicht erstellen.
 foldercreate.error.unable_to_open=Kann Verzeichniss '{0}' nicht \u00f6ffnen. Es scheint eine Datei zu sein\!
 foldercreate.key=s
 foldercreate.name=Neuen Folder
-##foldercreate.nameempty.text=Bitte einen Speicherort angeben\!
-##foldercreate.nameempty.title=Es wird ein Name f\u00fcr den neuen Folder ben\u00f6tigt.
-##foldercreate.progress.text=Erstelle Folder '{0}'
-##foldercreate.success=Folder {0} erstellt, lokale Kopie in '{1}'
+##foldercreate.nameempty.text=Name of the PowerFolder should not be empty
+##foldercreate.nameempty.title=Name required
+##foldercreate.progress.text=Creating PowerFolder '{0}'
+##foldercreate.success=PowerFolder {0} successfully setup, local copy at '{1}'
 
-##folderexception.dialog.text=Kann dem folgenden Folder nicht beitreten '{0}'.\nGrund\: {1}
-##folderexception.dialog.title=Problem mit dem Folder '{0}'
+##folderexception.dialog.text=Unable to join PowerFolder '{0}'.\nReason\: {1}
+##folderexception.dialog.title=Problem with PowerFolder '{0}'
 
 folderinfo.header=Details zum Folder
 folderinfo.syncprofile=Sync Modus
 folderinfo.totalsync=Sync Status
 
-##folderjoin.description=Diesem Folder beitreten
-##folderjoin.dialog.title=Folder {0} beitreten ?
+##folderjoin.description=Join this PowerFolder
+##folderjoin.dialog.title=Join PowerFolder {0}?
 folderjoin.inivtation=Einladung erhalten
 folderjoin.inivtationfrom=Sie haben eine Einladung von {0} erhalten\!
 folderjoin.invitationtext=Nachricht
@@ -341,11 +341,11 @@ folderjoin.secret=geheim
 folderjoin.warning.notempty.text=Der von Ihnen angegebene Ort des Folders '{0}' ist nicht leer.\nAlle dort befindlichen Dateien werden freigegeben\!\nSind Sie sicher das Folder an diesem Ort \n'{1}' anzulegen ?
 folderjoin.warning.notempty.title=Lokales Verzeichnis nicht leer
 
-##folderleave.description=Folder verlassen (Stops sharing und downloading datai). 
+##folderleave.description=Leave this PowerFolder
 folderleave.dialog.delete=Meta-informationen l\u00f6schen
 folderleave.dialog.sync_warning=Der Folder wird gerade synchronisiert\!
-##folderleave.dialog.text=Wollen Sie den Folder {0} wirklich verlassen ?
-##folderleave.dialog.title=Folder {0} verlassen ?
+##folderleave.dialog.text=Leave PowerFolder {0}?
+##folderleave.dialog.title=Leave PowerFolder {0}?
 folderleave.key=V
 folderleave.name=Folder verlassen
 
