--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -38,7 +38,7 @@ about.dialog.contributers=Colaboladores
 about.dialog.documentation=Documentaci\u00f3n
 about.dialog.general_information=Informaci\u00f3n General
 about.dialog.homepage=P\u00e1gina de Inicio
-##about.dialog.professional_folder_sharing_tool=Herramienta Profesional para compartir carpetas
+##about.dialog.professional_folder_sharing_tool=Sync, access, share and backup files easily
 about.dialog.send_bug_report=Enviar Reporte de Errores
 about.dialog.send_bug_report.key=B
 about.dialog.support=Soporte Tecnico
@@ -114,7 +114,7 @@ connect.name=Conectar
 
 console.updatecheck.new_developmentversion=------------ Nueva versi\u00f3n en desarrollo descargada ------------
 
-##createshortcut.description=Crea un acceso directo a esta carpeta en su escritorio
+##createshortcut.description=Creates a shortcut to this PowerFolder on your desktop
 createshortcut.key=C
 createshortcut.name=Crear acceso directo en el escritorio
 
@@ -133,7 +133,7 @@ deletefile.key=F
 deletefile.name=Eliminar archivos(s)
 
 ##dialog.addmembertofriendlist.button.add=Add To Friends
-##dialog.addmembertofriendlist.explain=(Si a\u00f1ade alguien a su lista de amigos, le otorga el permiso para modificar el\ncontenido de sus carpetas. p.e. a\u00f1adir nuevos archivos. Puede cambiar facilmente el estado\nde un amigo usando el men\u00fa contextual (Pulsar con el bot\u00f3n derecho).
+##dialog.addmembertofriendlist.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
 ##dialog.addmembertofriendlist.messageTitle=Message from {0}
 ##dialog.addmembertofriendlist.question={0} joined one or more PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
 ##dialog.addmembertofriendlist.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
@@ -257,7 +257,7 @@ filelist.filefilter.searchfieldinfo=Teclee el texto a buscar...
 filelist.modifiedby=Modificado por
 filelist.name=Nombre
 filelist.recursive=recursivo
-##filelist.status.no_files_available_add_files_and_invite=No hay archivos disponibles... a\u00f1ada archivos en la carpeta local y ofrezca a otros ser incluidos mediante una Invitaci\u00f3gn
+##filelist.status.no_files_available_add_files_and_invite=No files available... add files in your local folder and ask others to join this PowerFolder by Invitation
 filelist.status.no_files_available_add_files_in_folder=No hay archivos disponibles... Agrege archivos en su carpeta local para compartirlos
 filelist.status.no_files_available_yet_fetching_filelist=Todav\u00edga no hay archivos disponibles... buscando lista de archivos
 
@@ -295,37 +295,37 @@ folder.members.synchronisation_panel.folder_size=Tama\u00f1o de la carpeta
 folder.members.synchronisation_panel.local_size=Tama\u00f1o local
 folder.members.synchronisation_panel.title=Estado de sincronizaci\u00f3n del miembro
 
-##foldercreate.description=Crear una nueva carpeta compartida
+##foldercreate.description=Creates a new PowerFolder
 foldercreate.dialog.backupbyonlinestorage=Respaldo con Almacenamiento en linea
-##foldercreate.dialog.backuperror.text=Incapaz de instalar la carpeta de almac\u00e9n de respaldo en linea
-##foldercreate.dialog.backuperror.title=Incapaz de respaldar la carpeta
+##foldercreate.dialog.backuperror.text=Unable to setup the Online Storage to backup the PowerFolder
+##foldercreate.dialog.backuperror.title=Unable to backup PowerFolder
 ##foldercreate.dialog.create_desktop_shortcut=Create desktop shortcut
-##foldercreate.dialog.saveinvitation=Guardar invitaci\u00f3n en la carpeta
+##foldercreate.dialog.saveinvitation=Save an invitation in the PowerFolder
 foldercreate.dialog.sendinvitation=Mandar las invitaciones despu\u00e9s
-##foldercreate.dialog.settings=Ajuste la configuraci\u00f3n de la nueva carpeta compartida
-##foldercreate.dialog.title=Compartir una nueva carpeta
-##foldercreate.dirempty.text=La ubicaci\u00f3n principal de la carpeta no puede estar vac\u00eda
+##foldercreate.dialog.settings=Enter the settings for the new PowerFolder
+##foldercreate.dialog.title=Create new PowerFolder
+##foldercreate.dirempty.text=Base directory of PowerFolder should not be empty
 foldercreate.dirempty.title=Ubicaci\u00f3n principal de la carpeta obligatorio
-##foldercreate.error.already_taken=El directorio base ya est\u00e1 en uso por la carpeta '{0}'\n'{1}'
-##foldercreate.error.it_is_base_dir=No se puede abrir la carpeta en el directorio '{0}'. \u00a1Es el directorio base que PowerFolder usa para todas las carpetas\!
+##foldercreate.error.already_taken=Base directory already taken by PowerFolder '{0}'\n'{1}'
+##foldercreate.error.it_is_base_dir=Unable to open PowerFolder on directory '{0}'. It is the PowerFolder base directory for all PowerFolders\!
 foldercreate.error.unable_to_create=No se puede crear el directorio '{0}'
 foldercreate.error.unable_to_open=No se puede abrir el directorio local '{0}'. \!Puede ser un archivo\!
 foldercreate.key=s
 foldercreate.name=Compartir una carpeta
-##foldercreate.nameempty.text=El nombre de la carpeta no puede estar vac\u00edo
-##foldercreate.nameempty.title=Nombre de carpeta obligatorio
-##foldercreate.progress.text=Creando Carpeta '{0}'
-##foldercreate.success=Carpeta {0} compartida, la copia local en '{1}'
+##foldercreate.nameempty.text=Name of the PowerFolder should not be empty
+##foldercreate.nameempty.title=Name required
+##foldercreate.progress.text=Creating PowerFolder '{0}'
+##foldercreate.success=PowerFolder {0} successfully setup, local copy at '{1}'
 
-##folderexception.dialog.text=No se puede unir a la carpeta '{0}'.\nCausa\: {1}
-##folderexception.dialog.title=Problema con la carpeta '{0}'
+##folderexception.dialog.text=Unable to join PowerFolder '{0}'.\nReason\: {1}
+##folderexception.dialog.title=Problem with PowerFolder '{0}'
 
 folderinfo.header=Detalles de la carpeta
 folderinfo.syncprofile=Perfil de sincronizaci\u00f3n
 folderinfo.totalsync=Total sincronizado
 
-##folderjoin.description=Unirse a esta carpeta
-##folderjoin.dialog.title=\u00bfUnirse a la carpeta {0} ?
+##folderjoin.description=Join this PowerFolder
+##folderjoin.dialog.title=Join PowerFolder {0}?
 folderjoin.inivtation=Recibida invitaci\u00f3n
 folderjoin.inivtationfrom=Recibida invitaci\u00f3n de {0}
 folderjoin.invitationtext=Mensaje
@@ -341,11 +341,11 @@ folderjoin.secret=Secreta
 folderjoin.warning.notempty.text=El directorio para la copia local de la carpeta '{0}' no est\u00e1 vac\u00edo.\nTodos los archivos all\u00ed contenidos se enviar\u00e1n a los miembros.\n\u00bfEst\u00e1 seguro de ubicar la copia local en\n'{1}' ?
 folderjoin.warning.notempty.title=La ubicaci\u00f3n local no est\u00e1 vac\u00eda
 
-##folderleave.description=Abandonar esta carpeta (Dejar de compartir o descargar informaci\u00f3n)
+##folderleave.description=Leave this PowerFolder
 folderleave.dialog.delete=Borrar meta-data
 folderleave.dialog.sync_warning=La carpeta se esta sincronizando\!
-##folderleave.dialog.text=\u00bfAbandonar la carpeta {0} ?
-##folderleave.dialog.title=\u00bfAbandonar la carpeta {0} ?
+##folderleave.dialog.text=Leave PowerFolder {0}?
+##folderleave.dialog.title=Leave PowerFolder {0}?
 folderleave.key=A
 folderleave.name=Abandonar carpeta
 
