--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -38,7 +38,7 @@ about.dialog.contributers=Contributeurs
 about.dialog.documentation=Documentation
 about.dialog.general_information=Informations Globales
 about.dialog.homepage=Page d'accueil
-##about.dialog.professional_folder_sharing_tool=Outil de partage de fichiers
+##about.dialog.professional_folder_sharing_tool=Sync, access, share and backup files easily
 about.dialog.send_bug_report=Informer d'un bogue
 about.dialog.send_bug_report.key=B
 about.dialog.support=Support
@@ -114,7 +114,7 @@ connect.name=Connexion
 
 console.updatecheck.new_developmentversion=------------ Nouvelle version de d\u00e9veloppement t\u00e9l\u00e9charg\u00e9e ------------
 
-##createshortcut.description=Cr\u00e9er un raccourci vers ce dossier sur votre bureau
+##createshortcut.description=Creates a shortcut to this PowerFolder on your desktop
 createshortcut.key=C
 createshortcut.name=Cr\u00e9er un raccourci bureau
 
@@ -133,7 +133,7 @@ deletefile.key=E
 deletefile.name=Effacer le(s) fichier(s)
 
 ##dialog.addmembertofriendlist.button.add=Add To Friends
-##dialog.addmembertofriendlist.explain=(En ajoutant une personne \u00e0 votre liste d'ami(e)s, vous lui donnez la permission de modifier le\ncontenu de vos dossiers partag\u00e9s dans PowerFolder. Vous pouvez changer les statuts de vos ami(e)s \nen utilisant le menu contextuel (bouton droit de la souris).
+##dialog.addmembertofriendlist.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
 ##dialog.addmembertofriendlist.messageTitle=Message from {0}
 ##dialog.addmembertofriendlist.question={0} joined one or more PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
 ##dialog.addmembertofriendlist.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
@@ -257,7 +257,7 @@ filelist.filefilter.searchfieldinfo=Saisir un mot clef pour rechercher ...
 filelist.modifiedby=Modifi\u00e9 par
 filelist.name=Nom
 filelist.recursive=Vue \u00e0 plat
-##filelist.status.no_files_available_add_files_and_invite=Aucun fichier disponible... ajouter des fichiers dans votre dossier local et demander \u00e0 des ami(e)s de rejoindre ce dossier en envoyant une invitation
+##filelist.status.no_files_available_add_files_and_invite=No files available... add files in your local folder and ask others to join this PowerFolder by Invitation
 filelist.status.no_files_available_add_files_in_folder=Aucun fichier disponible... ajouter des fichiers dans votre dossier local pour les partager
 filelist.status.no_files_available_yet_fetching_filelist=Aucun fichier actuellement disponible... chercher dans la liste des fichiers
 
@@ -295,37 +295,37 @@ folder.members.synchronisation_panel.folder_size=Taille du dossier
 folder.members.synchronisation_panel.local_size=Taille locale
 folder.members.synchronisation_panel.title=Etat de la synchronisation
 
-##foldercreate.description=Cr\u00e9er un nouveau dossier partag\u00e9
+##foldercreate.description=Creates a new PowerFolder
 foldercreate.dialog.backupbyonlinestorage=Sauvegarde en ligne
-##foldercreate.dialog.backuperror.text=Impossible de configurer la sauvegarde en ligne du dossier
-##foldercreate.dialog.backuperror.title=Impossible de sauvegarder le dossier
+##foldercreate.dialog.backuperror.text=Unable to setup the Online Storage to backup the PowerFolder
+##foldercreate.dialog.backuperror.title=Unable to backup PowerFolder
 ##foldercreate.dialog.create_desktop_shortcut=Create desktop shortcut
-##foldercreate.dialog.saveinvitation=Enregistrer un fichier d'invitation dans le dossier
+##foldercreate.dialog.saveinvitation=Save an invitation in the PowerFolder
 foldercreate.dialog.sendinvitation=Envoyer ensuite des invitations
-##foldercreate.dialog.settings=Saisir les param\u00e8tres du nouveau dossier partag\u00e9
-##foldercreate.dialog.title=Partager un nouveau dossier
-##foldercreate.dirempty.text=L'emplacement du dossier \u00e0 partager ne doit pas \u00eatre vide
+##foldercreate.dialog.settings=Enter the settings for the new PowerFolder
+##foldercreate.dialog.title=Create new PowerFolder
+##foldercreate.dirempty.text=Base directory of PowerFolder should not be empty
 foldercreate.dirempty.title=Un r\u00e9pertoire racine est n\u00e9cessaire
-##foldercreate.error.already_taken=R\u00e9pertoire racine d\u00e9j\u00e0 utilis\u00e9 pour un autre dossier partag\u00e9 '{0}'\n'{1}'
-##foldercreate.error.it_is_base_dir=Impossible d'ouvrir le dossier '{0}' dans le r\u00e9pertoire indiqu\u00e9.\n Il s'agit du r\u00e9pertoire de base de PowerFolder qui est prot\u00e9g\u00e9.\!
+##foldercreate.error.already_taken=Base directory already taken by PowerFolder '{0}'\n'{1}'
+##foldercreate.error.it_is_base_dir=Unable to open PowerFolder on directory '{0}'. It is the PowerFolder base directory for all PowerFolders\!
 foldercreate.error.unable_to_create=Impossible de cr\u00e9er un nouveau r\u00e9pertoire '{0}'
 foldercreate.error.unable_to_open=Impossible d'ouvrir le r\u00e9pertoire local '{0}'. Cela correspond \u00e0 un fichier \!
 foldercreate.key=P
 foldercreate.name=Partager
-##foldercreate.nameempty.text=Le nom du dossier ne doit pas \u00eatre vide
-##foldercreate.nameempty.title=Nom du dossier demand\u00e9
-##foldercreate.progress.text=Cr\u00e9ation du dossier '{0}'
-##foldercreate.success=Dossier {0} partag\u00e9, copie locale situ\u00e9e sur '{1}'
+##foldercreate.nameempty.text=Name of the PowerFolder should not be empty
+##foldercreate.nameempty.title=Name required
+##foldercreate.progress.text=Creating PowerFolder '{0}'
+##foldercreate.success=PowerFolder {0} successfully setup, local copy at '{1}'
 
-##folderexception.dialog.text=Impossible de connecter le dossier '{0}'.\nRaison \: {1}
-##folderexception.dialog.title=Probl\u00e8me avec le dossier '{0}'
+##folderexception.dialog.text=Unable to join PowerFolder '{0}'.\nReason\: {1}
+##folderexception.dialog.title=Problem with PowerFolder '{0}'
 
 folderinfo.header=D\u00e9tails du dossier
 folderinfo.syncprofile=Profil de synchronisation
 folderinfo.totalsync=Synchronisation Totale
 
-##folderjoin.description=Connecter ce dossier
-##folderjoin.dialog.title=Se connecter au dossier {0} ?
+##folderjoin.description=Join this PowerFolder
+##folderjoin.dialog.title=Join PowerFolder {0}?
 folderjoin.inivtation=Invitation re\u00e7ue
 folderjoin.inivtationfrom=Invitation re\u00e7ue de {0}
 folderjoin.invitationtext=Message
@@ -341,11 +341,11 @@ folderjoin.secret=Priv\u00e9
 folderjoin.warning.notempty.text=Le r\u00e9pertoire pour la copie local du dossier '{0}' n'est pas vide.\nTous les fichiers contenus seront envoy\u00e9s aux membres concern\u00e9s.\nEtes-vous s\u00fbr d'effectuer le d\u00e9placement d'une copie dans\n'{1}' ?
 folderjoin.warning.notempty.title=Le r\u00e9pertoire racine n'est pas vide
 
-##folderleave.description=Se d\u00e9connecter du dossier (Arr\u00eate le partage et le t\u00e9l\u00e9chargement des donn\u00e9es)
+##folderleave.description=Leave this PowerFolder
 folderleave.dialog.delete=Supprimer les meta-data
 folderleave.dialog.sync_warning=Le dossier est actuellement en synchronisation\!
-##folderleave.dialog.text=Se d\u00e9connecter du dossier {0} ?
-##folderleave.dialog.title=D\u00e9connexion du dossier {0} ?
+##folderleave.dialog.text=Leave PowerFolder {0}?
+##folderleave.dialog.title=Leave PowerFolder {0}?
 folderleave.key=F
 folderleave.name=Fermer le dossier
 
