--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -38,7 +38,7 @@ about.dialog.contributers=Collaboratori
 about.dialog.documentation=Documentazione
 about.dialog.general_information=Informazioni generali
 about.dialog.homepage=Homepage
-##about.dialog.professional_folder_sharing_tool=Tool professionale di condivisione \ndelle cartelle
+##about.dialog.professional_folder_sharing_tool=Sync, access, share and backup files easily
 about.dialog.send_bug_report=Invia Report Errori
 about.dialog.send_bug_report.key=E
 about.dialog.support=Supporto
@@ -114,7 +114,7 @@ connect.name=Connesso
 
 console.updatecheck.new_developmentversion=------------ Scaricata nuova versione sviluppo------------
 
-##createshortcut.description=Crea un collegamento alla tua cartella sul desktop
+##createshortcut.description=Creates a shortcut to this PowerFolder on your desktop
 createshortcut.key=C
 createshortcut.name=Crea un collegamento sul desktop
 
@@ -133,7 +133,7 @@ deletefile.key=C
 deletefile.name=Cancella File(s)
 
 ##dialog.addmembertofriendlist.button.add=Add To Friends
-##dialog.addmembertofriendlist.explain=(Per aggiungere qualcuno alla tua lista di amici, devi dargli il permesso di modificare il\ncontenuto delle tue cartelle. Per esempio per aggiungere nuovi file. Puoi facilmente cambiare lo status\ndi amico di un membro usando il menu contestuale (click con il tasto destro del mouse)).
+##dialog.addmembertofriendlist.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
 ##dialog.addmembertofriendlist.messageTitle=Message from {0}
 ##dialog.addmembertofriendlist.question={0} joined one or more PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
 ##dialog.addmembertofriendlist.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
@@ -257,7 +257,7 @@ filelist.filefilter.searchfieldinfo=Inserisci una parola da cercare...
 filelist.modifiedby=Modificato da
 filelist.name=Nome
 filelist.recursive=ricorsivo
-##filelist.status.no_files_available_add_files_and_invite=Nessun file disponibile... aggiungi files nella tua cartella locale e chiedi ad altri di unirsi a questa cartella su Invito
+##filelist.status.no_files_available_add_files_and_invite=No files available... add files in your local folder and ask others to join this PowerFolder by Invitation
 filelist.status.no_files_available_add_files_in_folder=Nessun file disponibile... Aggiungi file nella tua cartella locale per condividerli
 filelist.status.no_files_available_yet_fetching_filelist=Nessun file ancora disponibile... recupero la lista dei file
 
@@ -295,37 +295,37 @@ folder.members.synchronisation_panel.folder_size=Dimensione della Cartella
 folder.members.synchronisation_panel.local_size=Dimensione Locale
 folder.members.synchronisation_panel.title=Status sincronizzazione Membro
 
-##foldercreate.description=Crea una nuova cartella condivisa
+##foldercreate.description=Creates a new PowerFolder
 foldercreate.dialog.backupbyonlinestorage=Backup con Memorizzazione Online
-##foldercreate.dialog.backuperror.text=Impossibile impostare la Memorizzazione Online per fare il backup della cartella
-##foldercreate.dialog.backuperror.title=Impossibile fare il backup della cartella
+##foldercreate.dialog.backuperror.text=Unable to setup the Online Storage to backup the PowerFolder
+##foldercreate.dialog.backuperror.title=Unable to backup PowerFolder
 ##foldercreate.dialog.create_desktop_shortcut=Create desktop shortcut
-##foldercreate.dialog.saveinvitation=Salva un invito nella cartella
+##foldercreate.dialog.saveinvitation=Save an invitation in the PowerFolder
 foldercreate.dialog.sendinvitation=Manda gli inviti pi\u00f9 tardi
-##foldercreate.dialog.settings=Inserisci le impostazioni per la nuova cartella condivisa
-##foldercreate.dialog.title=Condividi una nuova cartella
-##foldercreate.dirempty.text=La directory base non dovrebbe essere vuota
+##foldercreate.dialog.settings=Enter the settings for the new PowerFolder
+##foldercreate.dialog.title=Create new PowerFolder
+##foldercreate.dirempty.text=Base directory of PowerFolder should not be empty
 foldercreate.dirempty.title=La directory base e' necessaria
-##foldercreate.error.already_taken=La directory di base \u00e8 gi\u00e0 stata presa dalla cartella '{0}'\n'{1}'
-##foldercreate.error.it_is_base_dir=Impossibile arprire la cartella nella directory '{0}'. E' la directory base di PowerFolder per tutte le cartelle\!
+##foldercreate.error.already_taken=Base directory already taken by PowerFolder '{0}'\n'{1}'
+##foldercreate.error.it_is_base_dir=Unable to open PowerFolder on directory '{0}'. It is the PowerFolder base directory for all PowerFolders\!
 foldercreate.error.unable_to_create=Impossibile creare la directory '{0}'
 foldercreate.error.unable_to_open=Impossibile aprire la directory locale '{0}'. Sembra essere un file \!
 foldercreate.key=C
 foldercreate.name=Condividi cartella
-##foldercreate.nameempty.text=Il nome della cartella non deve essere vuoto
-##foldercreate.nameempty.title=Nome della cartella richiesto
-##foldercreate.progress.text=Creazione Cartella '{0}'
-##foldercreate.success=Cartella {0} condivisa, copia in locale a '{1}'
+##foldercreate.nameempty.text=Name of the PowerFolder should not be empty
+##foldercreate.nameempty.title=Name required
+##foldercreate.progress.text=Creating PowerFolder '{0}'
+##foldercreate.success=PowerFolder {0} successfully setup, local copy at '{1}'
 
-##folderexception.dialog.text=Impossibile accedere alla cartella '{0}'.\nMotivo\: {1}
-##folderexception.dialog.title=Problema con la cartella '{0}'
+##folderexception.dialog.text=Unable to join PowerFolder '{0}'.\nReason\: {1}
+##folderexception.dialog.title=Problem with PowerFolder '{0}'
 
 folderinfo.header=Dettagli della cartella
 folderinfo.syncprofile=Profilo di sincronizzazione
 folderinfo.totalsync=Sincronizzazione totale
 
-##folderjoin.description=Entra in questa cartella
-##folderjoin.dialog.title=Accedi alla cartella {0} ?
+##folderjoin.description=Join this PowerFolder
+##folderjoin.dialog.title=Join PowerFolder {0}?
 folderjoin.inivtation=Invito ricevuto
 folderjoin.inivtationfrom=Invito ricevuto da {0}
 folderjoin.invitationtext=Messaggio
@@ -341,11 +341,11 @@ folderjoin.secret=Segreta
 folderjoin.warning.notempty.text=La directory per la copia locale della cartella '{0}' non \u00e8 vuota.\nTutti i file contenuti al suo interno verranno trasferiti ai suoi membri.\nSei sicuro di mettere la copia locale di questa cartella a\n'{1}' ?
 folderjoin.warning.notempty.title=La directory base locale non \u00e8 vuota
 
-##folderleave.description=Esci la cartella (Ferma la condivisione e il download dei dati)
+##folderleave.description=Leave this PowerFolder
 folderleave.dialog.delete=Cancella i meta-data
 folderleave.dialog.sync_warning=La cartella si sta sincronizzando\!
-##folderleave.dialog.text=Esci dalla cartella {0} ?
-##folderleave.dialog.title=Esci dalla cartella {0} ?
+##folderleave.dialog.text=Leave PowerFolder {0}?
+##folderleave.dialog.title=Leave PowerFolder {0}?
 folderleave.key=E
 folderleave.name=Esci dalla cartella
 
