--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -38,7 +38,7 @@ about.dialog.contributers=\u5354\u529b
 about.dialog.documentation=\u4f7f\u7528\u8aac\u660e
 about.dialog.general_information=\u5168\u822c\u60c5\u5831
 about.dialog.homepage=\u30db\u30fc\u30e0\u30da\u30fc\u30b8
-##about.dialog.professional_folder_sharing_tool=\u30d7\u30ed\u30d5\u30a7\u30c3\u30b7\u30e7\u30ca\u30eb \u30d5\u30a9\u30eb\u30c0\u5171\u6709\u30c4\u30fc\u30eb
+##about.dialog.professional_folder_sharing_tool=Sync, access, share and backup files easily
 about.dialog.send_bug_report=\u30d0\u30b0\u5831\u544a(B)
 about.dialog.send_bug_report.key=B
 about.dialog.support=\u30b5\u30dd\u30fc\u30c8
@@ -114,7 +114,7 @@ connect.name=\u63a5\u7d9a(C)
 
 console.updatecheck.new_developmentversion=------------ \u65b0\u958b\u767a\u7248\u306e\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9 ------------
 
-##createshortcut.description=\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u3078\u306e\u30b7\u30e7\u30fc\u30c8\u30ab\u30c3\u30c8\u3092\u30c7\u30b9\u30af\u30c8\u30c3\u30d7\u306b\u4f5c\u6210
+##createshortcut.description=Creates a shortcut to this PowerFolder on your desktop
 createshortcut.key=C
 createshortcut.name=\u30c7\u30b9\u30af\u30c8\u30c3\u30d7\u306b\u30b7\u30e7\u30fc\u30c8\u30ab\u30c3\u30c8\u3092\u4f5c\u6210(C)
 
@@ -133,7 +133,7 @@ deletefile.key=F
 deletefile.name=\u30d5\u30a1\u30a4\u30eb\u524a\u9664(F)
 
 ##dialog.addmembertofriendlist.button.add=Add To Friends
-##dialog.addmembertofriendlist.explain=\uff08\u30e6\u30fc\u30b6\u30fc\u3092\u53cb\u4eba\u30ea\u30b9\u30c8\u306b\u8ffd\u52a0\u3059\u308b\u3068\u3001\u65b0\u898f\u30d5\u30a1\u30a4\u30eb\u306e\u8ffd\u52a0\u306a\u3069\u3001\u30d5\u30a9\u30eb\u30c0\u306e\u5185\u5bb9\u306b\u5909\u66f4\u3092\u52a0\u3048\u308b\u8a31\u53ef\u3092\u4e0e\u3048\u308b\u3053\u3068\u306b\u306a\u308a\u307e\u3059\u3002\n\u3000\u30e1\u30f3\u30d0\u30fc\u306e\u53cb\u4eba\u767b\u9332\u306f\u3001\u53f3\u30af\u30ea\u30c3\u30af\u30e1\u30cb\u30e5\u30fc\u3092\u4f7f\u7528\u3057\u3066\u7c21\u5358\u306b\u5909\u66f4\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u3059\u3002\uff09
+##dialog.addmembertofriendlist.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
 ##dialog.addmembertofriendlist.messageTitle=Message from {0}
 ##dialog.addmembertofriendlist.question={0} joined one or more PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
 ##dialog.addmembertofriendlist.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
@@ -257,7 +257,7 @@ filelist.filefilter.searchfieldinfo=\u691c\u7d22\u3059\u308b\u30ad\u30fc\u30ef\u
 filelist.modifiedby=\u5909\u66f4\u8005
 filelist.name=\u540d\u524d
 filelist.recursive=\u975e\u968e\u5c64\u8868\u793a
-##filelist.status.no_files_available_add_files_and_invite=\u53d6\u5f97\u53ef\u80fd\u30d5\u30a1\u30a4\u30eb\u306a\u3057... \u30ed\u30fc\u30ab\u30eb\u30d5\u30a9\u30eb\u30c0\u306b\u30d5\u30a1\u30a4\u30eb\u3092\u8ffd\u52a0\u3057\u3001\u62db\u5f85\u72b6\u306b\u3088\u3063\u3066\u4ed6\u306e\u4eba\u306b\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u3078\u306e\u53c2\u52a0\u3092\u4fc3\u3057\u3066\u304f\u3060\u3055\u3044
+##filelist.status.no_files_available_add_files_and_invite=No files available... add files in your local folder and ask others to join this PowerFolder by Invitation
 filelist.status.no_files_available_add_files_in_folder=\u53d6\u5f97\u53ef\u80fd\u30d5\u30a1\u30a4\u30eb\u306a\u3057... \u30d5\u30a1\u30a4\u30eb\u3092\u5171\u6709\u3059\u308b\u306b\u306f\u30ed\u30fc\u30ab\u30eb\u30d5\u30a9\u30eb\u30c0\u306b\u30d5\u30a1\u30a4\u30eb\u3092\u8ffd\u52a0\u3057\u3066\u304f\u3060\u3055\u3044
 filelist.status.no_files_available_yet_fetching_filelist=\u53d6\u5f97\u53ef\u80fd\u30d5\u30a1\u30a4\u30eb\u4f9d\u7136\u306a\u3057... \u30d5\u30a1\u30a4\u30eb\u30ea\u30b9\u30c8\u3092\u53d6\u5f97\u3057\u3066\u3044\u307e\u3059
 
@@ -295,37 +295,37 @@ folder.members.synchronisation_panel.folder_size=\u30d5\u30a9\u30eb\u30c0\u30b5\
 folder.members.synchronisation_panel.local_size=\u30ed\u30fc\u30ab\u30eb\u30b5\u30a4\u30ba
 folder.members.synchronisation_panel.title=\u30e1\u30f3\u30d0\u30fc\u306e\u540c\u671f\u72b6\u614b
 
-##foldercreate.description=\u65b0\u898f\u5171\u6709\u30d5\u30a9\u30eb\u30c0\u306e\u4f5c\u6210
+##foldercreate.description=Creates a new PowerFolder
 foldercreate.dialog.backupbyonlinestorage=\u30aa\u30f3\u30e9\u30a4\u30f3\u30b9\u30c8\u30ec\u30fc\u30b8\u306b\u3088\u308b\u30d0\u30c3\u30af\u30a2\u30c3\u30d7
-##foldercreate.dialog.backuperror.text=\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u3092\u30d0\u30c3\u30af\u30a2\u30c3\u30d7\u3059\u308b\u305f\u3081\u306e\u30aa\u30f3\u30e9\u30a4\u30f3\u30b9\u30c8\u30ec\u30fc\u30b8\u306e\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u304c\u3067\u304d\u307e\u305b\u3093\u3002
-##foldercreate.dialog.backuperror.title=\u30d5\u30a9\u30eb\u30c0\u306e\u30d0\u30c3\u30af\u30a2\u30c3\u30d7\u4e0d\u53ef
+##foldercreate.dialog.backuperror.text=Unable to setup the Online Storage to backup the PowerFolder
+##foldercreate.dialog.backuperror.title=Unable to backup PowerFolder
 ##foldercreate.dialog.create_desktop_shortcut=Create desktop shortcut
-##foldercreate.dialog.saveinvitation=\u62db\u5f85\u72b6\u30d5\u30a1\u30a4\u30eb\u3092\u30d5\u30a9\u30eb\u30c0\u306b\u4fdd\u5b58
+##foldercreate.dialog.saveinvitation=Save an invitation in the PowerFolder
 foldercreate.dialog.sendinvitation=\u62db\u5f85\u72b6\u30d5\u30a1\u30a4\u30eb\u3092\u3053\u306e\u8a2d\u5b9a\u5f8c\u306b\u9001\u4ed8
-##foldercreate.dialog.settings=\u65b0\u898f\u5171\u6709\u30d5\u30a9\u30eb\u30c0\u306e\u8a2d\u5b9a\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
-##foldercreate.dialog.title=\u65b0\u898f\u30d5\u30a9\u30eb\u30c0\u306e\u5171\u6709
-##foldercreate.dirempty.text=\u5171\u6709\u30d5\u30a9\u30eb\u30c0\u7528\u306e\u57fa\u672c\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u306e\u6307\u5b9a\u3092\u7a7a\u767d\u306e\u307e\u307e\u306b\u3057\u3066\u304a\u304f\u3053\u3068\u306f\u3067\u304d\u307e\u305b\u3093\u3002
+##foldercreate.dialog.settings=Enter the settings for the new PowerFolder
+##foldercreate.dialog.title=Create new PowerFolder
+##foldercreate.dirempty.text=Base directory of PowerFolder should not be empty
 foldercreate.dirempty.title=\u5171\u6709\u30d5\u30a9\u30eb\u30c0\u7528\u306e\u57fa\u672c\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u304c\u5fc5\u8981
-##foldercreate.error.already_taken=\u57fa\u672c\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u304c\u3001\u3059\u3067\u306b\u30d5\u30a9\u30eb\u30c0 '{0}' \u306b\u3088\u3063\u3066\u4f7f\u7528\u3055\u308c\u3066\u3044\u307e\u3059\u3002\n'{1}'
-##foldercreate.error.it_is_base_dir=\u30c7\u30a3\u30ec\u30af\u30c8\u30ea '{0}' \u306e\u30d5\u30a9\u30eb\u30c0\u3092\u958b\u304f\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3002\u3053\u308c\u306f\u3059\u3079\u3066\u306e\u53c2\u52a0\u30d5\u30a9\u30eb\u30c0\u306e\u305f\u3081\u306e\u57fa\u672c\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u3067\u3059\uff01
+##foldercreate.error.already_taken=Base directory already taken by PowerFolder '{0}'\n'{1}'
+##foldercreate.error.it_is_base_dir=Unable to open PowerFolder on directory '{0}'. It is the PowerFolder base directory for all PowerFolders\!
 foldercreate.error.unable_to_create=\u30c7\u30a3\u30ec\u30af\u30c8\u30ea '{0}' \u306e\u4f5c\u6210\u304c\u3067\u304d\u307e\u305b\u3093\u3002
 foldercreate.error.unable_to_open=\u30ed\u30fc\u30ab\u30eb\u30c7\u30a3\u30ec\u30af\u30c8\u30ea '{0}' \u3092\u958b\u304f\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3002 \u3053\u308c\u306f\u6050\u3089\u304f\u30d5\u30a1\u30a4\u30eb\u3067\u3059\uff01
 foldercreate.key=S
 foldercreate.name=\u65b0\u898f\u30d5\u30a9\u30eb\u30c0(S)
-##foldercreate.nameempty.text=\u30d5\u30a9\u30eb\u30c0\u306e\u540d\u524d\u3092\u7a7a\u767d\u306b\u3057\u3066\u304a\u304f\u3053\u3068\u306f\u3067\u304d\u307e\u305b\u3093\u3002
-##foldercreate.nameempty.title=\u30d5\u30a9\u30eb\u30c0\u540d\u304c\u5fc5\u8981
-##foldercreate.progress.text=\u30d5\u30a9\u30eb\u30c0 '{0}' \u4f5c\u6210\u4e2d
-##foldercreate.success=\u30d5\u30a9\u30eb\u30c0 {0} \u5171\u6709\u3001\u30ed\u30fc\u30ab\u30eb\u3067\u306e\u5834\u6240 '{1}'
+##foldercreate.nameempty.text=Name of the PowerFolder should not be empty
+##foldercreate.nameempty.title=Name required
+##foldercreate.progress.text=Creating PowerFolder '{0}'
+##foldercreate.success=PowerFolder {0} successfully setup, local copy at '{1}'
 
-##folderexception.dialog.text='{0}' \u30d5\u30a9\u30eb\u30c0\u3078\u306e\u53c2\u52a0\u306f\u3067\u304d\u307e\u305b\u3093\u3002\n\u7406\u7531\: {1}
-##folderexception.dialog.title='{0}' \u30d5\u30a9\u30eb\u30c0\u306b\u95a2\u3059\u308b\u554f\u984c
+##folderexception.dialog.text=Unable to join PowerFolder '{0}'.\nReason\: {1}
+##folderexception.dialog.title=Problem with PowerFolder '{0}'
 
 folderinfo.header=\u30d5\u30a9\u30eb\u30c0\u306e\u8a73\u7d30
 folderinfo.syncprofile=\u540c\u671f\u65b9\u5f0f
 folderinfo.totalsync=\u540c\u671f\u5408\u8a08
 
-##folderjoin.description=\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u306b\u53c2\u52a0
-##folderjoin.dialog.title={0} \u30d5\u30a9\u30eb\u30c0\u306b\u53c2\u52a0\u3057\u307e\u3059\u304b\uff1f
+##folderjoin.description=Join this PowerFolder
+##folderjoin.dialog.title=Join PowerFolder {0}?
 folderjoin.inivtation=\u62db\u5f85\u72b6\u306e\u53d7\u3051\u53d6\u308a
 folderjoin.inivtationfrom={0} \u304b\u3089\u62db\u5f85\u72b6\u304c\u5c4a\u304d\u307e\u3057\u305f\u3002
 folderjoin.invitationtext=\u30e1\u30c3\u30bb\u30fc\u30b8
@@ -341,11 +341,11 @@ folderjoin.secret=\u30b7\u30fc\u30af\u30ec\u30c3\u30c8
 folderjoin.warning.notempty.text=\u30d5\u30a9\u30eb\u30c0 '{0}' \u306e\u30ed\u30fc\u30ab\u30eb\u30b3\u30d4\u30fc\u304c\u3042\u308b\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u306f\u7a7a\u3067\u306f\u3042\u308a\u307e\u305b\u3093\u3002\n\u305d\u306e\u5834\u6240\u306e\u3059\u3079\u3066\u306e\u30d5\u30a1\u30a4\u30eb\u306f\u30d5\u30a9\u30eb\u30c0\u306e\u30e1\u30f3\u30d0\u30fc\u306b\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u3055\u308c\u307e\u3059\u3002\n\u672c\u5f53\u306b\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u306e\u30ed\u30fc\u30ab\u30eb\u30b3\u30d4\u30fc\u3092\u4ee5\u4e0b\u306e\u5834\u6240\u306b\u4fdd\u5b58\u3057\u307e\u3059\u304b\uff1f\n'{1}'
 folderjoin.warning.notempty.title=\u7a7a\u3067\u306f\u306a\u3044\u30ed\u30fc\u30ab\u30eb\u306e\u57fa\u672c\u30c7\u30a3\u30ec\u30af\u30c8\u30ea
 
-##folderleave.description=\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u3092\u9000\u907f\uff08\u30c7\u30fc\u30bf\u306e\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3084\u5171\u6709\u3092\u53d6\u308a\u6b62\u3081\uff09
+##folderleave.description=Leave this PowerFolder
 folderleave.dialog.delete=\u30e1\u30bf\u30c7\u30fc\u30bf\u306e\u524a\u9664
 folderleave.dialog.sync_warning=\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u306f\u73fe\u5728\u540c\u671f\u4e2d\u3067\u3059\uff01
-##folderleave.dialog.text=\u30d5\u30a9\u30eb\u30c0 {0} \u3092\u9000\u907f\u3057\u307e\u3059\u304b\uff1f
-##folderleave.dialog.title={0} \u30d5\u30a9\u30eb\u30c0\u9000\u907f\uff1f
+##folderleave.dialog.text=Leave PowerFolder {0}?
+##folderleave.dialog.title=Leave PowerFolder {0}?
 folderleave.key=L
 folderleave.name=\u30d5\u30a9\u30eb\u30c0\u9000\u907f(L)
 
