--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -38,7 +38,7 @@ about.dialog.contributers=Medewerkers
 about.dialog.documentation=Documentatie
 about.dialog.general_information=Algemene Informatie
 about.dialog.homepage=Homepage
-##about.dialog.professional_folder_sharing_tool=Professioneel folder deel programma
+##about.dialog.professional_folder_sharing_tool=Sync, access, share and backup files easily
 about.dialog.send_bug_report=Verzend debug verslag
 ##about.dialog.send_bug_report.key=B
 about.dialog.support=Ondersteuning
@@ -114,7 +114,7 @@ connect.name=Verbinden
 
 console.updatecheck.new_developmentversion=------------ Nieuwe ontwikkel versie gedownload ------------
 
-##createshortcut.description=Maakt een snelkoppeling naar de folder op het bureaublad
+##createshortcut.description=Creates a shortcut to this PowerFolder on your desktop
 createshortcut.key=S
 createshortcut.name=Maak een snelkoppeling
 
@@ -133,7 +133,7 @@ deletefile.key=V
 deletefile.name=Verwijder bestand(en)
 
 ##dialog.addmembertofriendlist.button.add=Add To Friends
-##dialog.addmembertofriendlist.explain=(Door iemand aan uw vriendenlijst toe te voegen, geeft u hem/haar toestemming om de bestanden\nin uw folder te wijzigen. Maar ook het toevoegen van bestanden. U kunt de "friend status" van een gebruiker\n met via het popupmenu (rechter muisknop).)
+##dialog.addmembertofriendlist.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
 ##dialog.addmembertofriendlist.messageTitle=Message from {0}
 ##dialog.addmembertofriendlist.question={0} joined one or more PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
 ##dialog.addmembertofriendlist.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
@@ -257,7 +257,7 @@ filelist.filefilter.searchfieldinfo=Vul trefwoord in om te zoeken...
 filelist.modifiedby=Veranderd door
 filelist.name=Naam
 filelist.recursive=platte lijst
-##filelist.status.no_files_available_add_files_and_invite=Geen bestanden beschikbaar... Voeg bestanden toe aan uw lokale map vraag anderen om lid te worden van deze folder met behulp van een Invitatie
+##filelist.status.no_files_available_add_files_and_invite=No files available... add files in your local folder and ask others to join this PowerFolder by Invitation
 filelist.status.no_files_available_add_files_in_folder=Geen bestanden beschikbaar... Voeg bestanden toe aan uw lokale map om ze te delen of te synchronizeren
 filelist.status.no_files_available_yet_fetching_filelist=Nog geen bestanden beschikbaar... bezig bestanden lijsten op te halen
 
@@ -295,37 +295,37 @@ folder.members.synchronisation_panel.folder_size=Folder grootte
 folder.members.synchronisation_panel.local_size=Lokale grootte   
 folder.members.synchronisation_panel.title=Lid Sync Status
 
-##foldercreate.description=Maakt een nieuwe gedeelde folder aan
+##foldercreate.description=Creates a new PowerFolder
 foldercreate.dialog.backupbyonlinestorage=Backup door Online Opslag
-##foldercreate.dialog.backuperror.text=Niet mogelijk om Online Opslag aan te maken en een backup van de folder maken
-##foldercreate.dialog.backuperror.title=Folder backup niet mogelijk 
+##foldercreate.dialog.backuperror.text=Unable to setup the Online Storage to backup the PowerFolder
+##foldercreate.dialog.backuperror.title=Unable to backup PowerFolder
 ##foldercreate.dialog.create_desktop_shortcut=Create desktop shortcut
-##foldercreate.dialog.saveinvitation=Sla een Invitatie bestand op in de Folder
+##foldercreate.dialog.saveinvitation=Save an invitation in the PowerFolder
 foldercreate.dialog.sendinvitation=Verzend invitaties later
-##foldercreate.dialog.settings=Kies de instellingen voor de nieuwe gedeelde folder
-##foldercreate.dialog.title=Deel een folder
-##foldercreate.dirempty.text=Basis map van de folder moet gekozen worden
+##foldercreate.dialog.settings=Enter the settings for the new PowerFolder
+##foldercreate.dialog.title=Create new PowerFolder
+##foldercreate.dirempty.text=Base directory of PowerFolder should not be empty
 foldercreate.dirempty.title=Folder basis map is verplicht
-##foldercreate.error.already_taken=Gekozen basis map is al bezet door Folder '{0}'\n'{1}'
-##foldercreate.error.it_is_base_dir=Niet in staat om Folder in Map '{0}' te openen. Dit is de PowerFolder basis map voor alle Folders\!
+##foldercreate.error.already_taken=Base directory already taken by PowerFolder '{0}'\n'{1}'
+##foldercreate.error.it_is_base_dir=Unable to open PowerFolder on directory '{0}'. It is the PowerFolder base directory for all PowerFolders\!
 foldercreate.error.unable_to_create=Maken van map '{0}' mislukt\!
 foldercreate.error.unable_to_open=Niet instaat om lokale map '{0}' te openen. Is het een bestand\!?
 foldercreate.key=D
 foldercreate.name=Deel folder
-##foldercreate.nameempty.text=De naam van de folder moet ingevuld worden
-##foldercreate.nameempty.title=Foldernaam is verplicht
-##foldercreate.progress.text=Bezig Folder '{0}' te maken...
-##foldercreate.success=Folder {0} gedeeld, lokale kopie '{1}'
+##foldercreate.nameempty.text=Name of the PowerFolder should not be empty
+##foldercreate.nameempty.title=Name required
+##foldercreate.progress.text=Creating PowerFolder '{0}'
+##foldercreate.success=PowerFolder {0} successfully setup, local copy at '{1}'
 
-##folderexception.dialog.text=Niet mogelijk om lid te worden van folder '{0}'.\nReden\: {1}
-##folderexception.dialog.title=Probleem met folder '{0}'
+##folderexception.dialog.text=Unable to join PowerFolder '{0}'.\nReason\: {1}
+##folderexception.dialog.title=Problem with PowerFolder '{0}'
 
 folderinfo.header=Folder Details
 folderinfo.syncprofile=Sync profiel
 folderinfo.totalsync=Totaal sync
 
-##folderjoin.description=Wordt lid van deze Folder
-##folderjoin.dialog.title=Wordt lid van folder {0} ?
+##folderjoin.description=Join this PowerFolder
+##folderjoin.dialog.title=Join PowerFolder {0}?
 folderjoin.inivtation=Invitatie ontvangen
 folderjoin.inivtationfrom=Invitatie ontvangen van {0}
 ##folderjoin.invitationtext=Message
@@ -341,11 +341,11 @@ folderjoin.secret=Geheim
 folderjoin.warning.notempty.text=De map voor de lokale kopie van de folder '{0}' is niet leeg.\nAlle bestanden aanwezig daar kunnen worden verzonden aan deelnemers in de folder.\nWeet u zeker dat de lokale kopie van de folder hier geplaatst moet worden\n'{1}' ?
 folderjoin.warning.notempty.title=Lokale basis map niet leeg
 
-##folderleave.description=Verlaat deze folder (Stop delen en downloading van gegevens)
+##folderleave.description=Leave this PowerFolder
 ##folderleave.dialog.delete=Delete meta-data
 folderleave.dialog.sync_warning=De folder is momenteel aan het synchronizeren\!
-##folderleave.dialog.text=Stop delen van folder {0} ?
-##folderleave.dialog.title=Stop delen van Folder {0} ?
+##folderleave.dialog.text=Leave PowerFolder {0}?
+##folderleave.dialog.title=Leave PowerFolder {0}?
 folderleave.key=V
 folderleave.name=Verlaat folder
 
