--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -38,7 +38,7 @@ about.dialog.contributers=\u0421\u043e\u0434\u0435\u0439\u0441\u0442\u0432\u0443
 about.dialog.documentation=\u0414\u043e\u043a\u0443\u043c\u0435\u043d\u0442\u0430\u0446\u0438\u044f
 about.dialog.general_information=\u041e\u0441\u043d\u043e\u0432\u043d\u0430\u044f \u0438\u043d\u0444\u043e\u0440\u043c\u0430\u0446\u0438\u044f
 about.dialog.homepage=Homepage
-##about.dialog.professional_folder_sharing_tool=\u041f\u0440\u043e\u0444\u0438\u0441\u0441\u0438\u043e\u043d\u0430\u043b\u044c\u043d\u043e\u0435 \u043f\u0440\u0438\u043b\u043e\u0436\u0435\u043d\u0438\u0435 \u0434\u043b\u044f \u043e\u0431\u043c\u0435\u043d\u0430 \u043f\u0430\u043f\u043a\u0430\u043c\u0438
+##about.dialog.professional_folder_sharing_tool=Sync, access, share and backup files easily
 about.dialog.send_bug_report=\u041f\u043e\u0441\u043b\u0430\u0442\u044c \u043e\u0442\u0447\u0435\u0442 \u043e\u0431 \u043e\u0448\u0438\u0431\u043a\u0435
 about.dialog.send_bug_report.key=B
 about.dialog.support=\u041f\u043e\u0434\u0434\u0435\u0440\u0436\u043a\u0430
@@ -114,7 +114,7 @@ connect.name=\u0421\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u0438\u0435 \u0441
 
 console.updatecheck.new_developmentversion=------------ \u041d\u043e\u0432\u0430\u044f \u0432\u0435\u0440\u0441\u0438\u044f \u0441\u043a\u0430\u0447\u0435\u043d\u0430 ------------
 
-##createshortcut.description=\u0421\u043e\u0437\u0434\u0430\u0442\u044c \u044f\u0440\u043b\u044b\u043a \u0434\u043b\u044f \u044d\u0442\u043e\u0439 \u043f\u0430\u043f\u043a\u0438 \u043d\u0430 \u0440\u0430\u0431\u043e\u0447\u0435\u043c \u0441\u0442\u043e\u043b\u0435
+##createshortcut.description=Creates a shortcut to this PowerFolder on your desktop
 createshortcut.key=C
 createshortcut.name=\u0421\u043e\u0437\u0434\u0430\u0442\u044c \u044f\u0440\u043b\u044b\u043a \u043d\u0430 \u0440\u0430\u0431\u043e\u0447\u0435\u043c \u0441\u0442\u043e\u043b\u0435
 
@@ -133,7 +133,7 @@ deletefile.key=F
 deletefile.name=\u0421\u0442\u0435\u0440\u0435\u0442\u044c \u0444\u0430\u0439\u043b(\u044b)
 
 ##dialog.addmembertofriendlist.button.add=Add To Friends
-##dialog.addmembertofriendlist.explain=(\u041f\u0440\u0438 \u0434\u043e\u0431\u0430\u0432\u043b\u0435\u043d\u0438\u0435 \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044f \u043a \u0441\u043f\u0438\u0441\u043a\u0443 \u0434\u0440\u0443\u0437\u0435\u0439 \u0432\u044b \u0440\u0430\u0437\u0440\u0435\u0448\u0430\u0435\u0442\u0435 \u0435\u043c\u0443 \u0438\u0437\u043c\u0435\u043d\u044f\u0442\u044c \n\u0441\u043e\u0434\u0435\u0440\u0436\u0438\u043c\u043e\u0435 \u0432\u0430\u0448\u0438\u0445 \u043f\u0430\u043f\u043e\u043a, \u043d\u0430\u043f\u0440\u0438\u043c\u0435\u0440 \u0434\u043e\u0431\u0430\u0432\u043b\u044f\u0442\u044c \u043d\u043e\u0432\u044b\u0435 \u0444\u0430\u0439\u043b\u044b. \u0412\u044b \u043c\u043e\u0436\u0435\u0442\u0435 \u0438\u0437\u043c\u0435\u043d\u0438\u0442\u044c \u0441\u0442\u0430\u0442\u0443\u0441\n\u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044f \u0438\u0441\u043f\u043e\u043b\u044c\u0437\u0443\u044f \u043a\u043e\u043d\u0442\u0435\u043a\u0441\u0442\u043d\u043e\u0435 \u043c\u0435\u043d\u044e(\u043f\u0440\u0430\u0432\u0430\u044f \u043a\u043d\u043e\u043f\u043a\u0430 \u043c\u044b\u0448\u0438).
+##dialog.addmembertofriendlist.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
 ##dialog.addmembertofriendlist.messageTitle=Message from {0}
 ##dialog.addmembertofriendlist.question={0} joined one or more PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
 ##dialog.addmembertofriendlist.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
@@ -257,7 +257,7 @@ filelist.filefilter.searchfieldinfo=\u041f\u043e\u0438\u0441\u043a...
 filelist.modifiedby=\u0418\u0437\u043c\u0435\u043d\u0435\u043d\u043e
 filelist.name=\u0418\u043c\u044f
 filelist.recursive="\u041f\u043b\u043e\u0441\u043a\u0438\u0439" \u043f\u0440\u043e\u0441\u043c\u043e\u0442\u0440
-##filelist.status.no_files_available_add_files_and_invite=\u041d\u0435\u0442 \u0434\u043e\u0441\u0442\u0443\u043f\u043d\u044b\u0445 \u0444\u0430\u0439\u043b\u043e\u0432... \u0414\u043e\u0431\u0430\u0432\u044c\u0442\u0435 \u0444\u0430\u0439\u043b\u044b \u0432 \u043b\u043e\u043a\u0430\u043b\u044c\u043d\u0443\u044e \u043f\u0430\u043f\u043a\u0443 \u0438 \u043f\u043e\u0448\u043b\u0438\u0442\u0435 \u043f\u0440\u0438\u0433\u043b\u0430\u0448\u0435\u043d\u0438\u0435 \u0434\u0440\u0443\u0433\u0438\u043c \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044f\u043c
+##filelist.status.no_files_available_add_files_and_invite=No files available... add files in your local folder and ask others to join this PowerFolder by Invitation
 filelist.status.no_files_available_add_files_in_folder=\u041d\u0435\u0442 \u0434\u043e\u0441\u0442\u0443\u043f\u043d\u044b\u0445 \u0444\u0430\u0439\u043b\u043e\u0432... \u0414\u043e\u0431\u0430\u0432\u044c\u0442\u0435 \u0444\u0430\u0439\u043b\u044b \u0432 \u043b\u043e\u043a\u0430\u043b\u044c\u043d\u0443\u044e \u043f\u0430\u043f\u043a\u0443 \u0447\u0442\u043e\u0432 \u0441\u0434\u0435\u043b\u0430\u0442\u044c \u0438\u0445 \u0434\u043e\u0441\u0442\u0443\u043f\u043d\u044b\u043c\u0438
 filelist.status.no_files_available_yet_fetching_filelist=\u041d\u0435\u0442 \u0434\u043e\u0441\u0442\u0443\u043f\u043d\u044b\u0445 \u0444\u0430\u0439\u043b\u043e\u0432... \u0417\u0430\u0447\u0438\u0442\u044b\u0432\u0430\u0435\u0442\u0441\u044f \u0441\u043f\u0438\u0441\u043e\u043a \u0444\u0430\u0439\u043b\u043e\u0432
 
@@ -295,37 +295,37 @@ folder.members.synchronisation_panel.folder_size=\u0420\u0430\u0437\u043c\u0435\
 folder.members.synchronisation_panel.local_size=\u0420\u0430\u0437\u043c\u0435\u0440 \u043d\u0430 \u043b\u043e\u043a\u0430\u043b\u044c\u043d\u043e\u043c \u0434\u0438\u0441\u043a\u0435
 folder.members.synchronisation_panel.title=\u0421\u0442\u0430\u0442\u0443\u0441 \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044f
 
-##foldercreate.description=\u0421\u043e\u0437\u0434\u0430\u0435\u0442 \u043d\u043e\u0432\u0443\u044e \u041f\u0430\u043f\u043a\u0443 \u0441 \u0432\u044b\u0448\u0438\u043c\u0438 \u0444\u0430\u0439\u043b\u0430\u043c\u0438.
+##foldercreate.description=Creates a new PowerFolder
 foldercreate.dialog.backupbyonlinestorage=\u0421\u043e\u0437\u0434\u0430\u0442\u044c \u0440\u0435\u0437\u0435\u0440\u0432\u043d\u0443\u044e \u043a\u043e\u043f\u0438\u044e \u0447\u0435\u0440\u0435\u0437 \u041e\u043d\u043b\u0430\u0439\u043d \u0425\u0440\u0430\u043d\u0438\u043b\u0438\u0449\u0435
-##foldercreate.dialog.backuperror.text=\u041d\u0435\u0432\u043e\u0437\u043c\u043e\u0436\u043d\u043e \u0443\u0441\u0442\u0430\u043d\u043e\u0432\u0438\u0442\u044c \u041e\u043d\u043b\u0430\u0439\u043d \u0425\u0440\u0430\u043d\u0438\u043b\u0438\u0449\u0435 \u0434\u043b\u044f \u0440\u0435\u0437\u0435\u0440\u0432\u043d\u043e\u0433\u043e \u043a\u043e\u043f\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u044f \u043f\u0430\u043f\u043a\u0438
-##foldercreate.dialog.backuperror.title=\u041d\u0435\u0432\u043e\u0437\u043c\u043e\u0436\u043d\u043e \u0441\u043e\u0437\u0434\u0430\u0442\u044c \u0440\u0435\u0437\u0435\u0440\u0432\u043d\u0443\u044e \u043a\u043e\u043f\u0438\u044e
+##foldercreate.dialog.backuperror.text=Unable to setup the Online Storage to backup the PowerFolder
+##foldercreate.dialog.backuperror.title=Unable to backup PowerFolder
 ##foldercreate.dialog.create_desktop_shortcut=Create desktop shortcut
-##foldercreate.dialog.saveinvitation=\u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c \u043f\u0440\u0438\u0433\u043b\u0430\u0448\u0435\u043d\u0438\u0435 \u0432 \u041f\u0430\u043f\u043a\u0435
+##foldercreate.dialog.saveinvitation=Save an invitation in the PowerFolder
 foldercreate.dialog.sendinvitation=\u041f\u043e\u0441\u043b\u0430\u0442\u044c \u043f\u0440\u0438\u0433\u043b\u0430\u0448\u0435\u043d\u0438\u044f \u043f\u043e\u0441\u043b\u0435
-##foldercreate.dialog.settings=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u0438 \u0434\u043b\u044f \u043d\u043e\u0432\u043e\u0439 \u041f\u0430\u043f\u043a\u0438
-##foldercreate.dialog.title=\u0421\u043e\u0437\u0434\u0430\u0442\u044c \u041f\u0430\u043f\u043a\u0443
-##foldercreate.dirempty.text=\u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430 \u0432\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u043c\u0435\u0441\u0442\u043e \u0434\u043b\u044f \u0441\u043e\u0445\u0440\u0430\u043d\u0435\u043d\u0438\u044f \u0441\u043e\u0434\u0435\u0440\u0436\u0438\u043c\u043e\u0433\u043e \u041f\u0430\u043f\u043a\u0438\!
+##foldercreate.dialog.settings=Enter the settings for the new PowerFolder
+##foldercreate.dialog.title=Create new PowerFolder
+##foldercreate.dirempty.text=Base directory of PowerFolder should not be empty
 foldercreate.dirempty.title=\u041c\u0435\u0441\u0442\u043e \u0434\u043b\u044f \u0441\u043e\u0445\u0440\u0430\u043d\u0435\u043d\u0438\u044f \u043d\u0435 \u0437\u0430\u0434\u0430\u043d\u043e
-##foldercreate.error.already_taken=\u041c\u0435\u0441\u0442\u043e \u0443\u0436\u0435 \u0437\u0430\u043d\u044f\u0442\u043e \u041f\u0430\u043f\u043a\u043e\u0439 '{0}'\n'{1}'
-##foldercreate.error.it_is_base_dir=\u041d\u0435\u0432\u043e\u0437\u043c\u043e\u0436\u043d\u043e \u043e\u0442\u043a\u0440\u044b\u0442\u044c \u041f\u0430\u043f\u043a\u0443 \u0432 \u043f\u043e\u0434\u043a\u0430\u0442\u0430\u043b\u043e\u0433\u0435 '{0}'. \u042d\u0442\u043e \u0431\u0430\u0437\u043e\u0432\u044b\u0439 \u043f\u043e\u0434\u043a\u0430\u0442\u0430\u043b\u043e\u0433 PowerFolder-\u0430 \u0434\u043b\u044f \u0432\u0441\u0435\u0445 \u041f\u0430\u043f\u043e\u043a\!
+##foldercreate.error.already_taken=Base directory already taken by PowerFolder '{0}'\n'{1}'
+##foldercreate.error.it_is_base_dir=Unable to open PowerFolder on directory '{0}'. It is the PowerFolder base directory for all PowerFolders\!
 foldercreate.error.unable_to_create=\u041d\u0435\u0432\u043e\u0437\u043c\u043e\u0436\u043d\u043e \u0441\u043e\u0437\u0434\u0430\u0442\u044c \u043f\u043e\u0434\u043a\u0430\u0442\u0430\u043b\u043e\u0433 '{0}'
 foldercreate.error.unable_to_open=\u041d\u0435\u0432\u043e\u0437\u043c\u043e\u0436\u043d\u043e \u043e\u0442\u043a\u0440\u044b\u0442\u044c \u043f\u043e\u0434\u043a\u0430\u0442\u0430\u043b\u043e\u0433  '{0}'. \u042d\u0442\u043e \u0444\u0430\u0439\u043b \!
 foldercreate.key=s
 foldercreate.name=\u0421\u043e\u0437\u0434\u0430\u0442\u044c \u041f\u0430\u043f\u043a\u0443
-##foldercreate.nameempty.text=\u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430 \u0437\u0430\u0434\u0430\u0439\u0442\u0435 \u043c\u0435\u0441\u0442\u043e \u0434\u043b\u044f \u0441\u043e\u0445\u0440\u0430\u043d\u0435\u043d\u0438\u044f\!
-##foldercreate.nameempty.title=\u041d\u0435\u043e\u0431\u0445\u043e\u0434\u0438\u043c\u043e \u0432\u0432\u0435\u0441\u0442\u0438 \u0438\u043c\u044f \u0434\u043b\u044f \u043d\u043e\u0432\u043e\u0439 \u043f\u0430\u043f\u043a\u0438.
-##foldercreate.progress.text=\u0421\u043e\u0437\u0434\u0430\u0435\u0442\u0441\u044f \u041f\u0430\u043f\u043a\u0430 '{0}'
-##foldercreate.success=\u041f\u0430\u043f\u043a\u0430 {0} \u0441\u043e\u0437\u0434\u0430\u043d\u0430, \u043b\u043e\u043a\u0430\u043b\u044c\u043d\u0430\u044f \u043a\u043e\u043f\u0438\u044f \u0432 '{1}'
+##foldercreate.nameempty.text=Name of the PowerFolder should not be empty
+##foldercreate.nameempty.title=Name required
+##foldercreate.progress.text=Creating PowerFolder '{0}'
+##foldercreate.success=PowerFolder {0} successfully setup, local copy at '{1}'
 
-##folderexception.dialog.text=\u0421\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u0438\u0435 \u0441 \u041f\u0430\u043f\u043a\u043e\u0439 '{0}' \u043d\u0435\u0432\u043e\u0437\u043c\u043e\u0436\u043d\u043e. \n\u041f\u0440\u0438\u0447\u0438\u043d\u0430\: {1}
-##folderexception.dialog.title=\u041f\u0440\u043e\u0431\u043b\u0435\u043d\u0430 \u0441 \u041f\u0430\u043f\u043a\u043e\u0439 '{0}'
+##folderexception.dialog.text=Unable to join PowerFolder '{0}'.\nReason\: {1}
+##folderexception.dialog.title=Problem with PowerFolder '{0}'
 
 folderinfo.header=\u041f\u043e\u0434\u0440\u043e\u0431\u043d\u043e\u0441\u0442\u0438 \u043e \u041f\u0430\u043f\u043a\u0435
 folderinfo.syncprofile=\u0420\u0435\u0436\u0438\u043c \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438\u0438
 folderinfo.totalsync=\u0421\u0442\u0430\u0442\u0443\u0441 \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438\u0438
 
-##folderjoin.description=\u041f\u043e\u0434\u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u0438\u0435 \u043a \u041f\u0430\u043f\u043a\u0435
-##folderjoin.dialog.title=\u0412\u043e\u0439\u0442\u0438 \u0432 \u041f\u0430\u043f\u043a\u0443 {0} ?
+##folderjoin.description=Join this PowerFolder
+##folderjoin.dialog.title=Join PowerFolder {0}?
 folderjoin.inivtation=\u041f\u043e\u043b\u0443\u0447\u0435\u043d\u043e \u043f\u0440\u0438\u0433\u043b\u0430\u0448\u0435\u043d\u0438\u0435
 folderjoin.inivtationfrom=\u0412\u044b \u043f\u043e\u043b\u0443\u0447\u0438\u043b\u0438 \u043f\u0440\u0438\u0433\u043b\u0430\u0448\u0435\u043d\u0438\u0435 \u043e\u0442 {0} \!
 folderjoin.invitationtext=\u0421\u043e\u043e\u0431\u0449\u0435\u043d\u0438\u0435
@@ -341,11 +341,11 @@ folderjoin.secret=\u0441\u0435\u043a\u0440\u0435\u0442\u043d\u043e
 folderjoin.warning.notempty.text=\u0423\u043a\u0430\u0437\u0430\u043d\u043e\u0435 \u043c\u0435\u0441\u0442\u043e \u041f\u0430\u043f\u043a\u0438 '{0}' \u043d\u0435 \u043f\u0443\u0441\u0442\u043e\u0435.\n\u0412\u0441\u0435 \u043d\u0430\u0439\u0434\u0435\u043d\u044b\u0435 \u0432 \u043d\u0435\u0439 \u0444\u0430\u0439\u043b\u044b \u0431\u0443\u0434\u0443\u0442 \u0441\u0442\u0430\u043d\u0443\u0442 \u0434\u043e\u0441\u0442\u0443\u043f\u043d\u044b\u043c\u0438\!\n\u0412\u044b \u0443\u0432\u0435\u0440\u0435\u043d\u044b, \u0447\u0442\u043e \u0445\u043e\u0442\u0438\u0442\u0435 \u0440\u0435\u0437\u043c\u0435\u0441\u0442\u0438\u0442\u044c \u043f\u0430\u043f\u043a\u0443 \u0432 \n'{1}' ?
 folderjoin.warning.notempty.title=\u041b\u043e\u043a\u0430\u043b\u044c\u043d\u0430\u044f \u041f\u0430\u043f\u043a\u0430 \u043d\u0435 \u043f\u0443\u0441\u0442\u0430\u044f
 
-##folderleave.description=\u041f\u043e\u043a\u0438\u043d\u0443\u0442\u044c \u041f\u0430\u043f\u043a\u0443 (\u041e\u0441\u0442\u0430\u043d\u043e\u0432\u0438\u0442\u044c \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438\u044e \u0444\u0430\u0439\u043b\u043e\u0432)
+##folderleave.description=Leave this PowerFolder
 folderleave.dialog.delete=\u0423\u0434\u0430\u043b\u0438\u0442\u044c \u043c\u0435\u0442\u0430\u0434\u0430\u043d\u043d\u044b\u0435
 folderleave.dialog.sync_warning=\u0414\u0430\u043d\u043d\u0430\u044f \u041f\u0430\u043f\u043a\u0430 \u0432 \u0434\u0430\u043d\u043d\u044b\u0439 \u043c\u043e\u043c\u0435\u043d\u0442 \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0438\u0440\u0443\u0435\u0442\u0441\u044f\!
-##folderleave.dialog.text=\u0412\u044b \u0443\u0432\u0435\u0440\u0435\u043d\u044b \u0447\u0442\u043e \u0445\u043e\u0442\u0438\u0442\u0435 \u043f\u043e\u043a\u0438\u043d\u0443\u0442\u044c \u041f\u0430\u043f\u043a\u0443 {0} ?
-##folderleave.dialog.title=\u041f\u043e\u043a\u0438\u043d\u0443\u0442\u044c \u041f\u0430\u043f\u043a\u0443 {0} ?
+##folderleave.dialog.text=Leave PowerFolder {0}?
+##folderleave.dialog.title=Leave PowerFolder {0}?
 folderleave.key=L
 folderleave.name=\u041f\u043e\u043a\u0438\u043d\u0443\u0442\u044c \u041f\u0430\u043f\u043a\u0443
 
