--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -38,7 +38,7 @@ about.dialog.contributers=Medverkande
 about.dialog.documentation=Dokumentation
 about.dialog.general_information=Allm\u00e4n information
 about.dialog.homepage=Hemsida
-##about.dialog.professional_folder_sharing_tool=Professionellt verktyg f\u00f6r fildelning
+##about.dialog.professional_folder_sharing_tool=Sync, access, share and backup files easily
 about.dialog.send_bug_report=Skicka felrapport
 ##about.dialog.send_bug_report.key=B
 about.dialog.support=Support
@@ -114,7 +114,7 @@ connect.name=Anslut
 
 console.updatecheck.new_developmentversion=------------ Ny utvecklingsversion nedladdad ------------
 
-##createshortcut.description=Skapa en genv\u00e4g till foldernn p\u00e5 ditt skrivbord
+##createshortcut.description=Creates a shortcut to this PowerFolder on your desktop
 createshortcut.key=S
 createshortcut.name=Skapa en genv\u00e4g p\u00e5 skrivbordet
 
@@ -133,7 +133,7 @@ deletefile.key=F
 deletefile.name=Tag bort fil(er)
 
 ##dialog.addmembertofriendlist.button.add=Add To Friends
-##dialog.addmembertofriendlist.explain=(Genom att l\u00e4gga till n\u00e5gon i v\u00e4nlistan, ger du till\u00e5telse att f\u00f6r\u00e4ndra inneh\u00e5llet\n i dina foldrar, t.ex l\u00e4gga till filer i foldern. Du kan l\u00e4tt \u00e4ndra en anv\u00e4ndares\n v\u00e4n-status p\u00e5 comtext-menyn (via h\u00f6gerklick med musen)).
+##dialog.addmembertofriendlist.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
 ##dialog.addmembertofriendlist.messageTitle=Message from {0}
 ##dialog.addmembertofriendlist.question={0} joined one or more PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
 ##dialog.addmembertofriendlist.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
@@ -257,7 +257,7 @@ filelist.filefilter.searchfieldinfo=Ange s\u00f6kord...
 filelist.modifiedby=\u00c4ndrad av
 filelist.name=Namn
 filelist.recursive=platt vy
-##filelist.status.no_files_available_add_files_and_invite=Inga filer tillg\u00e4ngliga... l\u00e4gg till filer i din lokala folder och be andra g\u00e5 med i denna folder genom att invitera dem
+##filelist.status.no_files_available_add_files_and_invite=No files available... add files in your local folder and ask others to join this PowerFolder by Invitation
 filelist.status.no_files_available_add_files_in_folder=Inga filer tillg\u00e4ngliga... l\u00e4gg till filer i din lokala folder f\u00f6r att dela med dig av dem
 filelist.status.no_files_available_yet_fetching_filelist=Inga filer tillg\u00e4ngliga \u00e4nnu... h\u00e4mtar fillista
 
@@ -295,37 +295,37 @@ folder.members.synchronisation_panel.folder_size=Folderstorlek
 folder.members.synchronisation_panel.local_size=Lokal storlek
 folder.members.synchronisation_panel.title=Medlemmens synk-status
 
-##foldercreate.description=Skapar en ny delad folder
+##foldercreate.description=Creates a new PowerFolder
 ##foldercreate.dialog.backupbyonlinestorage=Backup by Online Storage
 ##foldercreate.dialog.backuperror.text=Unable to setup the Online Storage to backup the PowerFolder
 ##foldercreate.dialog.backuperror.title=Unable to backup PowerFolder
 ##foldercreate.dialog.create_desktop_shortcut=Create desktop shortcut
-##foldercreate.dialog.saveinvitation=Spara en inbjudan i foldern
+##foldercreate.dialog.saveinvitation=Save an invitation in the PowerFolder
 foldercreate.dialog.sendinvitation=Skicka inbjudningar efter\u00e5t
-##foldercreate.dialog.settings=Ange inst\u00e4llningar f\u00f6r den nya delade foldern
-##foldercreate.dialog.title=Skapa en ny folder
-##foldercreate.dirempty.text=Folderns bas-mapp f\u00e5r inte vara tom
+##foldercreate.dialog.settings=Enter the settings for the new PowerFolder
+##foldercreate.dialog.title=Create new PowerFolder
+##foldercreate.dirempty.text=Base directory of PowerFolder should not be empty
 foldercreate.dirempty.title=Bas-mapp f\u00f6r foldern kr\u00e4vs
-##foldercreate.error.already_taken=Bas-mappen \u00e4r redan upptagen av folder '{0}'\n'{1}'
-##foldercreate.error.it_is_base_dir=Kan inte \u00f6ppna en folder i mappen '{0}'. Det \u00e4r PowerFolders bas-mapp f\u00f6r alla foldrar\!
+##foldercreate.error.already_taken=Base directory already taken by PowerFolder '{0}'\n'{1}'
+##foldercreate.error.it_is_base_dir=Unable to open PowerFolder on directory '{0}'. It is the PowerFolder base directory for all PowerFolders\!
 foldercreate.error.unable_to_create=Kan ej skapa mappen '{0}'
 foldercreate.error.unable_to_open=Kan inte \u00f6ppna den lokala mappen '{0}'. Det verkar vara en fil \!
 foldercreate.key=s
 foldercreate.name=Ny folder
-##foldercreate.nameempty.text=Foldernamn m\u00e5ste anges
-##foldercreate.nameempty.title=Foldernamn kr\u00e4vs
-##foldercreate.progress.text=Skapar foldern '{0}'
-##foldercreate.success=Folder {0} delad, lokal kopia i '{1}'
+##foldercreate.nameempty.text=Name of the PowerFolder should not be empty
+##foldercreate.nameempty.title=Name required
+##foldercreate.progress.text=Creating PowerFolder '{0}'
+##foldercreate.success=PowerFolder {0} successfully setup, local copy at '{1}'
 
-##folderexception.dialog.text=Kan inte g\u00e5 med i foldern '{0}'.\nOrsak\: {1}
-##folderexception.dialog.title=Problem med folder '{0}'
+##folderexception.dialog.text=Unable to join PowerFolder '{0}'.\nReason\: {1}
+##folderexception.dialog.title=Problem with PowerFolder '{0}'
 
 folderinfo.header=Folder Detailjer
 folderinfo.syncprofile=Synk profil
 folderinfo.totalsync=Total synk
 
-##folderjoin.description=G\u00e5 med i denna folder
-##folderjoin.dialog.title=G\u00e5 med i folder {0} ?
+##folderjoin.description=Join this PowerFolder
+##folderjoin.dialog.title=Join PowerFolder {0}?
 folderjoin.inivtation=Inbjudan mottagen
 folderjoin.inivtationfrom=Inbjudan mottagen fr\u00e5n {0}
 ##folderjoin.invitationtext=Message
@@ -341,11 +341,11 @@ folderjoin.secret=Privat
 folderjoin.warning.notempty.text=Mappen f\u00f6r den lokala kopian av foldern '{0}' \u00e4r inte tom.\nAlla filersom finns i mappen kommer att ladddas upp till folderns samtliga medlemmar.\n\u00c4r du verkligen s\u00e4ker p\u00e5 att du vill placera den lokala kopian av foldern i\n'{1}' ?
 folderjoin.warning.notempty.title=Lokal bas-mapp \u00e4r inte tom
 
-##folderleave.description=L\u00e4mna denna folder (Sluta dela och ladda ner data)
+##folderleave.description=Leave this PowerFolder
 ##folderleave.dialog.delete=Delete meta-data
 folderleave.dialog.sync_warning=Foldern h\u00e5ller p\u00e5 att synkroniseras\!
-##folderleave.dialog.text=Vill du verkligen l\u00e4mna folder {0} ?
-##folderleave.dialog.title=L\u00e4mna folder {0} ?
+##folderleave.dialog.text=Leave PowerFolder {0}?
+##folderleave.dialog.title=Leave PowerFolder {0}?
 folderleave.key=L
 folderleave.name=L\u00e4mna folder
 
