--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -38,7 +38,7 @@ about.dialog.contributers=Wsp\u00f3\u0142tw\u00f3rcy
 about.dialog.documentation=Dokumentacja
 about.dialog.general_information=Og\u00f3lne Informacje
 about.dialog.homepage=Strona Domowa
-##about.dialog.professional_folder_sharing_tool=Profesjonalne narz\u0119dzie\n do udost\u0119pniania folder\u00f3w
+##about.dialog.professional_folder_sharing_tool=Sync, access, share and backup files easily
 about.dialog.send_bug_report=Wy\u015blij raport o b\u0142\u0119dzie
 about.dialog.send_bug_report.key=B
 about.dialog.support=Wsparcie Techniczne
@@ -114,7 +114,7 @@ connect.name=Po\u0142\u0105cz
 
 console.updatecheck.new_developmentversion=------------ Zako\u0144czono pobieranie nowej wersji rozwojowej ------------
 
-##createshortcut.description=Tworzy skr\u00f3t do folderu na pulpicie
+##createshortcut.description=Creates a shortcut to this PowerFolder on your desktop
 createshortcut.key=D
 createshortcut.name=Stw\u00f3rz skr\u00f3t na pulpicie
 
@@ -133,7 +133,7 @@ deletefile.key=F
 deletefile.name=Usu\u0144 pliki
 
 ##dialog.addmembertofriendlist.button.add=Add To Friends
-##dialog.addmembertofriendlist.explain=(Dodaj\u0105c kogo\u015b do swojej listy znajomych dajesz mu prawo do modyfikowania\nzawarto\u015bci folder\u00f3w np. do dodawania nowych plik\u00f3w. Mo\u017cesz w \u0142atwy spos\u00f3b zmieni\u0107\nstatus znajomego u\u017cywaj\u0105c menu kontekstowego - klikni\u0119cie prawym przyciskiem myszy).
+##dialog.addmembertofriendlist.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
 ##dialog.addmembertofriendlist.messageTitle=Message from {0}
 ##dialog.addmembertofriendlist.question={0} joined one or more PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
 ##dialog.addmembertofriendlist.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
@@ -257,7 +257,7 @@ filelist.filefilter.searchfieldinfo=Wpisz s\u0142owa kluczowe...
 filelist.modifiedby=Zmodyfikowany przez
 filelist.name=Nazwa
 filelist.recursive=p\u0142aski widok
-##filelist.status.no_files_available_add_files_and_invite=Nie ma dost\u0119pnych plik\u00f3w... dodaj pliki do Twojego lokalnego folderu i wy\u015blij innym Zaproszenie
+##filelist.status.no_files_available_add_files_and_invite=No files available... add files in your local folder and ask others to join this PowerFolder by Invitation
 filelist.status.no_files_available_add_files_in_folder=Nie ma dost\u0119pnych plik\u00f3w... Dodaj pliki do Twojego lokalnego folderu, aby je udost\u0119pnia\u0107
 filelist.status.no_files_available_yet_fetching_filelist=Nie ma jeszcze dost\u0119pnych plik\u00f3w... pobieranie listy plik\u00f3w
 
@@ -295,37 +295,37 @@ folder.members.synchronisation_panel.folder_size=Rozmiar Folderu
 folder.members.synchronisation_panel.local_size=Lokalny Rozmiar
 folder.members.synchronisation_panel.title=Status Synchronizacji
 
-##foldercreate.description=Tworzy nowy udost\u0119pniany Folder
+##foldercreate.description=Creates a new PowerFolder
 foldercreate.dialog.backupbyonlinestorage=Kopia zapasowa z Archiwum Online PowerFolder
-##foldercreate.dialog.backuperror.text=Nie mo\u017cna by\u0142o stworzy\u0107 kopii zapasowej folderu
-##foldercreate.dialog.backuperror.title=Nie mo\u017cna stworzy\u0107 kopii zapasowej
+##foldercreate.dialog.backuperror.text=Unable to setup the Online Storage to backup the PowerFolder
+##foldercreate.dialog.backuperror.title=Unable to backup PowerFolder
 ##foldercreate.dialog.create_desktop_shortcut=Create desktop shortcut
-##foldercreate.dialog.saveinvitation=Zapisz zaproszenie w folderze
+##foldercreate.dialog.saveinvitation=Save an invitation in the PowerFolder
 foldercreate.dialog.sendinvitation=Wy\u015blij zaproszenie
-##foldercreate.dialog.settings=Skonfiguruj nowy udost\u0119pniany folder
-##foldercreate.dialog.title=Stw\u00f3rz nowy Folder
-##foldercreate.dirempty.text=Folder bazowy nie powinien by\u0107 pusty
+##foldercreate.dialog.settings=Enter the settings for the new PowerFolder
+##foldercreate.dialog.title=Create new PowerFolder
+##foldercreate.dirempty.text=Base directory of PowerFolder should not be empty
 foldercreate.dirempty.title=Konieczny jest folder bazowy
-##foldercreate.error.already_taken=Folder bazowy jest ju\u017c zaj\u0119ty przez '{0}'\n'{1}'
-##foldercreate.error.it_is_base_dir=Nie mo\u017cna otworzy\u0107 '{0}'. To jest folder bazowy PowerFolder\!
+##foldercreate.error.already_taken=Base directory already taken by PowerFolder '{0}'\n'{1}'
+##foldercreate.error.it_is_base_dir=Unable to open PowerFolder on directory '{0}'. It is the PowerFolder base directory for all PowerFolders\!
 foldercreate.error.unable_to_create=Nie mo\u017cna stworzy\u0107 folderu '{0}'
 foldercreate.error.unable_to_open=Nie mo\u017cna otworzy\u0107 lokalnego folderu '{0}'. Prawdopodobnie jest plikiem \!
 foldercreate.key=N
 foldercreate.name=Nowy Folder
-##foldercreate.nameempty.text=Nazwa folderu nie mo\u017ce by\u0107 pusta
-##foldercreate.nameempty.title=Nazwa folderu
-##foldercreate.progress.text=Tworzenie Folderu '{0}'
-##foldercreate.success=Folder {0} udost\u0119pniony, lokalna kopia '{1}'
+##foldercreate.nameempty.text=Name of the PowerFolder should not be empty
+##foldercreate.nameempty.title=Name required
+##foldercreate.progress.text=Creating PowerFolder '{0}'
+##foldercreate.success=PowerFolder {0} successfully setup, local copy at '{1}'
 
-##folderexception.dialog.text=Nie mo\u017cna przy\u0142\u0105czy\u0107 si\u0119 do folderu '{0}'.\nPow\u00f3d\: {1}
-##folderexception.dialog.title=Problem z folderem '{0}'
+##folderexception.dialog.text=Unable to join PowerFolder '{0}'.\nReason\: {1}
+##folderexception.dialog.title=Problem with PowerFolder '{0}'
 
 folderinfo.header=Szczeg\u00f3\u0142y Folderu
 folderinfo.syncprofile=Profil Synchronizacji
 folderinfo.totalsync=Ca\u0142kowita Synchronizacja
 
-##folderjoin.description=Przy\u0142\u0105cz si\u0119 do tego Folderu
-##folderjoin.dialog.title=Przy\u0142\u0105czy\u0107 si\u0119 do Folderu {0}?
+##folderjoin.description=Join this PowerFolder
+##folderjoin.dialog.title=Join PowerFolder {0}?
 folderjoin.inivtation=Odebrano Zaproszenie
 folderjoin.inivtationfrom=Odebrano Zaproszenie od {0}
 folderjoin.invitationtext=Wiadomo\u015b\u0107
@@ -341,11 +341,11 @@ folderjoin.secret=Prywatny
 folderjoin.warning.notempty.text=Folder lokalnej kopii '{0}' nie jest pusty.\nWszystkie pliki zostan\u0105 wys\u0142ane do u\u017cytkownik\u00f3w przy\u0142\u0105czonych do folderu.\nCzy na pewno chcesz umie\u015bci\u0107 lokaln\u0105 kopi\u0119 tego folderu w \n'{1}'?
 folderjoin.warning.notempty.title=Lokalny folder bazowy nie jest pusty
 
-##folderleave.description=Opu\u015b\u0107 ten folder (Zako\u0144cz udost\u0119pnianie oraz pobieranie danych)
+##folderleave.description=Leave this PowerFolder
 folderleave.dialog.delete=Usu\u0144 meta-dane
 folderleave.dialog.sync_warning=Ten folder jest w trakcie synchronizacji\!
-##folderleave.dialog.text=Opu\u015bci\u0107 folder {0}?
-##folderleave.dialog.title=Opu\u015bci\u0107 folder {0}?
+##folderleave.dialog.text=Leave PowerFolder {0}?
+##folderleave.dialog.title=Leave PowerFolder {0}?
 folderleave.key=L
 folderleave.name=Opu\u015b\u0107 Folder
 
