--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -38,7 +38,7 @@ about.dialog.contributers=\u8d21\u732e\u8005
 about.dialog.documentation=\u6587\u6863
 about.dialog.general_information=\u901a\u7528\u4fe1\u606f
 about.dialog.homepage=\u9996\u9875
-##about.dialog.professional_folder_sharing_tool=\u4e13\u4e1a\u6587\u4ef6\u5171\u4eab\u5de5\u5177
+##about.dialog.professional_folder_sharing_tool=Sync, access, share and backup files easily
 about.dialog.send_bug_report=\u53d1\u9001\u9519\u8bef\u62a5\u544a
 about.dialog.send_bug_report.key=B
 about.dialog.support=\u652f\u6301
@@ -114,7 +114,7 @@ connect.name=\u8fde\u63a5
 
 console.updatecheck.new_developmentversion=------------ \u4e0b\u8f7d\u65b0\u5f00\u53d1\u7248\u672c ------------
 
-##createshortcut.description=\u5728\u684c\u9762\u4e3a\u6b64\u6587\u4ef6\u5939\u521b\u5efa\u5feb\u6377\u65b9\u5f0f
+##createshortcut.description=Creates a shortcut to this PowerFolder on your desktop
 createshortcut.key=C
 createshortcut.name=\u521b\u5efa\u684c\u9762\u5feb\u6377\u65b9\u5f0f
 
@@ -133,7 +133,7 @@ deletefile.key=F
 deletefile.name=\u5220\u9664\u6587\u4ef6
 
 ##dialog.addmembertofriendlist.button.add=Add To Friends
-##dialog.addmembertofriendlist.explain=\uff08\u901a\u8fc7\u6dfb\u52a0\u7528\u6237\u5230\u597d\u53cb\u5217\u8868\uff0c\u4f60\u53ef\u4ee5\u7ed9\u4ed6\u4fee\u6539\u4f60\u6587\u4ef6\u5939\u5185\u5bb9\u7684\u6743\u9650\uff0c\u5982\u6dfb\u52a0\u65b0\u6587\u4ef6\u3002\u4f60\u53ef\u4ee5\u7528\u53f3\u952e\u83dc\u5355\u5f88\u5bb9\u6613\u5730\u6539\u53d8\u6210\u5458\u72b6\u6001\u3002\uff09
+##dialog.addmembertofriendlist.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
 ##dialog.addmembertofriendlist.messageTitle=Message from {0}
 ##dialog.addmembertofriendlist.question={0} joined one or more PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
 ##dialog.addmembertofriendlist.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
@@ -257,7 +257,7 @@ filelist.filefilter.searchfieldinfo=\u8f93\u5165\u5173\u952e\u8bcd\u641c\u7d22
 filelist.modifiedby=\u4fee\u6539\u8005
 filelist.name=\u540d\u79f0
 filelist.recursive=\u5e73\u677f\u89c6\u56fe
-##filelist.status.no_files_available_add_files_and_invite=\u65e0\u6709\u6548\u6587\u4ef6\u2026\u2026\u8bf7\u5728\u4f60\u7684\u672c\u5730\u6587\u4ef6\u5939\u6dfb\u52a0\u6587\u4ef6\u5e76\u901a\u8fc7\u9080\u8bf7\u8ba9\u5176\u4ed6\u7528\u6237\u52a0\u5165\u6587\u4ef6\u5939\u3002
+##filelist.status.no_files_available_add_files_and_invite=No files available... add files in your local folder and ask others to join this PowerFolder by Invitation
 filelist.status.no_files_available_add_files_in_folder=\u65e0\u6709\u6548\u6587\u4ef6\u2026\u2026\u8bf7\u5728\u4f60\u7684\u672c\u5730\u6587\u4ef6\u5939\u6dfb\u52a0\u5171\u4eab\u6587\u4ef6
 filelist.status.no_files_available_yet_fetching_filelist=\u4ecd\u65e0\u6709\u6548\u6587\u4ef6\u2026\u2026\u83b7\u53d6\u5217\u8868
 
@@ -295,37 +295,37 @@ folder.members.synchronisation_panel.folder_size=\u6587\u4ef6\u5939\u5927\u5c0f
 folder.members.synchronisation_panel.local_size=\u672c\u5730\u5927\u5c0f
 folder.members.synchronisation_panel.title=\u6210\u5458\u540c\u6b65\u72b6\u6001
 
-##foldercreate.description=\u521b\u5efa\u5171\u4eab
+##foldercreate.description=Creates a new PowerFolder
 foldercreate.dialog.backupbyonlinestorage=\u7528\u5728\u7ebf\u5b58\u50a8\u5907\u4efd
-##foldercreate.dialog.backuperror.text=\u4e0d\u80fd\u8bbe\u7f6e\u5728\u7ebf\u5b58\u50a8\u6765\u5907\u4efd\u6587\u4ef6\u5939
-##foldercreate.dialog.backuperror.title=\u4e0d\u80fd\u5907\u4efd\u6587\u4ef6\u5939
+##foldercreate.dialog.backuperror.text=Unable to setup the Online Storage to backup the PowerFolder
+##foldercreate.dialog.backuperror.title=Unable to backup PowerFolder
 ##foldercreate.dialog.create_desktop_shortcut=Create desktop shortcut
-##foldercreate.dialog.saveinvitation=\u5728\u6587\u4ef6\u5939\u4fdd\u7559\u9080\u8bf7
+##foldercreate.dialog.saveinvitation=Save an invitation in the PowerFolder
 foldercreate.dialog.sendinvitation=\u4ee5\u540e\u53d1\u9001\u9080\u8bf7
-##foldercreate.dialog.settings=\u8bbe\u7f6e\u65b0\u5171\u4eab
-##foldercreate.dialog.title=\u5171\u4eab\u65b0\u6587\u4ef6\u5939
-##foldercreate.dirempty.text=\u6587\u4ef6\u5939\u5730\u5740\u4e0d\u80fd\u4e3a\u7a7a
+##foldercreate.dialog.settings=Enter the settings for the new PowerFolder
+##foldercreate.dialog.title=Create new PowerFolder
+##foldercreate.dirempty.text=Base directory of PowerFolder should not be empty
 foldercreate.dirempty.title=\u8bf7\u9009\u62e9\u6587\u4ef6\u5939\u5730\u5740
-##foldercreate.error.already_taken=\u8be5\u5730\u5740\u5df2\u7ecf\u88ab\u6587\u4ef6\u5939 '{0}' \u5360\u7528\uff01\n'{1}'
-##foldercreate.error.it_is_base_dir=\u4e0d\u80fd\u6253\u5f00\u76ee\u5f55\u4e3a '{0}' \u7684\u6587\u4ef6\u5939\u3002\u8fd9\u662f PowerFolder \u6240\u6709\u6587\u4ef6\u7684\u6839\u76ee\u5f55\uff01
+##foldercreate.error.already_taken=Base directory already taken by PowerFolder '{0}'\n'{1}'
+##foldercreate.error.it_is_base_dir=Unable to open PowerFolder on directory '{0}'. It is the PowerFolder base directory for all PowerFolders\!
 foldercreate.error.unable_to_create=\u4e0d\u80fd\u521b\u5efa\u6587\u4ef6\u5939 '{0}'
 foldercreate.error.unable_to_open=\u4e0d\u80fd\u6253\u5f00\u672c\u5730\u6587\u4ef6\u5939 '{0}' \u3002\u53ef\u80fd\u662f\u4e00\u4e2a\u6587\u4ef6\uff01
 foldercreate.key=s
 foldercreate.name=\u5171\u4eab\u6587\u4ef6\u5939
-##foldercreate.nameempty.text=\u6587\u4ef6\u5939\u540d\u79f0\u4e0d\u80fd\u4e3a\u7a7a\u3002
-##foldercreate.nameempty.title=\u8981\u6c42\u6587\u4ef6\u5939\u540d\u79f0
-##foldercreate.progress.text=\u521b\u5efa\u6587\u4ef6\u5939 '{0}'
-##foldercreate.success=\u6587\u4ef6\u5939 {0} \u88ab\u5171\u4eab\uff0c \u672c\u5730\u526f\u672c\u5728 '{1}'
+##foldercreate.nameempty.text=Name of the PowerFolder should not be empty
+##foldercreate.nameempty.title=Name required
+##foldercreate.progress.text=Creating PowerFolder '{0}'
+##foldercreate.success=PowerFolder {0} successfully setup, local copy at '{1}'
 
-##folderexception.dialog.text=\u4e0d\u80fd\u52a0\u5165\u6587\u4ef6\u5939 '{0}'\u3002\n\u539f\u56e0\uff1a {1}
-##folderexception.dialog.title=\u6587\u4ef6\u5939 '{0}' \u51fa\u9519
+##folderexception.dialog.text=Unable to join PowerFolder '{0}'.\nReason\: {1}
+##folderexception.dialog.title=Problem with PowerFolder '{0}'
 
 folderinfo.header=\u6587\u4ef6\u5939\u8be6\u60c5
 folderinfo.syncprofile=\u540c\u6b65\u9009\u9879
 folderinfo.totalsync=\u603b\u540c\u6b65
 
-##folderjoin.description=\u52a0\u5165\u6587\u4ef6\u5939
-##folderjoin.dialog.title=\u52a0\u5165\u6587\u4ef6\u5939 {0} ?
+##folderjoin.description=Join this PowerFolder
+##folderjoin.dialog.title=Join PowerFolder {0}?
 folderjoin.inivtation=\u6536\u5230\u9080\u8bf7
 folderjoin.inivtationfrom=\u6536\u5230 {0} \u7684\u9080\u8bf7
 folderjoin.invitationtext=\u6d88\u606f
@@ -341,11 +341,11 @@ folderjoin.secret=\u79c1\u6709
 folderjoin.warning.notempty.text=\u6587\u4ef6\u5939 '{0}' \u672c\u5730\u526f\u672c\u7684\u76ee\u5f55\u975e\u7a7a\u3002\n\u6587\u4ef6\u5939\u4e0b\u7684\u6587\u4ef6\u5c06\u88ab\u4e0a\u4f20\u7ed9\u5176\u4ed6\u6210\u5458\u3002\n\u4f60\u786e\u5b9a\u8981\u628a\u6587\u4ef6\u5939\u7684\u672c\u5730\u526f\u672c\u653e\u5728\n'{1}' ?
 folderjoin.warning.notempty.title=\u672c\u5730\u6839\u76ee\u5f55\u975e\u7a7a
 
-##folderleave.description=\u79bb\u5f00\u8be5\u6587\u4ef6\u5939\uff08\u505c\u6b62\u5171\u4eab\u548c\u4e0b\u8f7d\u6570\u636e\uff09
+##folderleave.description=Leave this PowerFolder
 folderleave.dialog.delete=\u5220\u9664\u5143\u6570\u636e
 folderleave.dialog.sync_warning=\u6b64\u6587\u4ef6\u5939\u6b63\u5728\u540c\u6b65\!
-##folderleave.dialog.text=\u79bb\u5f00\u6587\u4ef6\u5939 {0} ?
-##folderleave.dialog.title=\u79bb\u5f00\u6587\u4ef6\u5939 {0} ?
+##folderleave.dialog.text=Leave PowerFolder {0}?
+##folderleave.dialog.title=Leave PowerFolder {0}?
 folderleave.key=L
 folderleave.name=\u79bb\u5f00\u6587\u4ef6\u5939
 
